구조체와 클래스의 차이

--- a/Swift/11.클래스와 구조체/클래스와 구조체 1.md
+++ b/Swift/11.클래스와 구조체/클래스와 구조체 1.md
@@ -32,7 +32,7 @@ class Dog {         // 타입(사용자 정의 타입)이므로 대문자 사용
 ##### 붕어빵 찍어내기 (객체의 생성)
 
 ```
-var bori = Dog()
+var sia = Dog()
 
 ```
 
@@ -43,21 +43,21 @@ var bori = Dog()
 ##### 객체의 속성에 접근
 
 ```
-bori.name
+sia.name
 
-bori.name = "보리"
+sia.name = "복실이"
 
-bori.name
+sia.name
 
-bori.weight
+sia.weight
 
-bori.weight = 15
+sia.weight = 15
 
-bori.weight
+sia.weight
 
-bori.sit()
+sia.sit()
 
-bori.layDown()
+sia.layDown()
 
 
 ```
@@ -65,7 +65,7 @@ bori.layDown()
 ##### 붕어빵 찍어내기 (객체의 생성)
 
 ```
-var choco = Dog()
+var shin = Dog()
 
 ```
 
@@ -73,20 +73,237 @@ var choco = Dog()
 
 ```
 
-choco.name
+shin.name
 
-choco.name = "초코"
+shin.name = "튼실이"
 
-choco.name
+shin.name
 
-choco.weight
+shin.weight
 
-choco.weight = 10
+shin.weight = 25
 
-choco.weight
+shin.weight
 
-choco.sit()
+shin.sit()
 
-choco.layDown()
+shin.layDown()
 
 ```
+
+## 2) 구조체(Struct)
+
+- 구조체의 정의와 instance의 생성
+
+// 붕어빵틀 만들기
+
+struct Bird {
+
+    var name = "새"
+
+    var weight = 0.0
+
+    func fly() {
+
+        print("공중날기")
+    }
+
+}
+
+##### 붕어빵 찍어내기 (인스턴스의 생성)
+
+```
+var gugu = Bird()
+
+```
+
+##### 인스턴스의 속성에 접근
+
+```
+
+gugu.name
+
+gugu.name = "구구"
+
+gugu.name
+
+gugu.weight
+
+gugu.weight = 0.35
+
+gugu.weight
+
+gugu.fly()
+
+```
+
+##### 붕어빵 찍어내기 (인스턴스의 생성)
+
+```
+var pigeon = Bird()
+
+```
+
+##### 인스턴스의 속성에 접근
+
+```
+
+pigeon.name
+
+pigeon.name = "피죤"
+
+pigeon.name
+
+pigeon.weight
+
+pigeon.weight = 2.35
+
+pigeon.weight
+
+pigeon.fly()
+
+```
+
+### 클래스와 구조체
+
+- 클래스와 구조체 모두 메모리에 찍어낸 것을 인스턴스(instance)라고 함
+
+- 인스턴스 예시: 카카오톡 친구목록
+
+- 인스턴스는 실제로 메모리에 할당되어 구체적 실체를 갖춘 것이라는 의미
+
+- 스위프트에서는 클래스의 instance를 특별히 객체(object)라고 부름
+
+- 클래스의 인스턴스(객체):클래스의 인스턴스만 '객체' 라고 부른다.
+
+- 구조체의 인스턴스
+
+- 열거형의 인스턴스
+
+#### _⭐️ 가장 큰 차이는 메모리 저장 방식의 차이 ⭐️(중요)_
+
+##### 1. 구조체
+
+- 값 형식(Value Type)
+
+- 인스턴스 데이터를 모두 스택(Stack)에 저장
+
+- (복사시) 값을 전달할 때마다 복사본을 생성 (다른 메모리 공간 생성)
+
+- 스택(Stack)의 공간에 저장, 스택 프레임 종료시, 메모리에서 자동 제거
+
+- 힙의 영역에서 찍어 내지 않는다.
+
+- 데이터 영역에 구조체의 원형이 존재하고, 실제로 만들어낸 데이터가 스택에 저장된다.
+
+- 스택의 영역에 저장된다는 뜻은 함수가 실행되는 동안에만 존재한다는 뜻이다.
+
+##### 2. 클래스
+
+- 참조 형식(Reference Type)
+
+- 인스턴스 데이터는 힙(Heap)에 저장, 해당 힙을 가르키는 변수는 스택에 저장하고
+
+- 메모리 주소값이 힙(Heap)을 가르킴
+
+- (복사시) 값을 전달하는 것이 아니고, 저장된 주소를 전달
+
+- 힙(Heap)의 공간에 저장, ARC 시스템을 통해 메모리 관리(주의해야함)
+
+- 참고: 스택은 데이터를 차곡 차곡(적층) 쌓지만, 힙은 데이터를 군데 군데(따로 따로) 저장
+
+- 스택의 영역에 실제로 생성된 변수가 생기고(메모리 주소만 담김. 그림 참조),
+
+메모리 주소가 담기고, 그 주소가 힙의 영역을 가리킨다.
+
+### 클래스와 구조체의 메모리
+
+```
+class Person {
+
+    var name = "사람"
+
+}
+
+```
+
+> 클래스의 변수를 복사하는 경우에는
+
+메모리 주소를 복사해서 담는 것이기 때문에 동일한 데이터를 가리키게 된다.
+
+값을 저장하는 것이 아니고 저장된 주소를 전달하기 때문에 동일한 데이터를 가리킴
+
+```
+var p = Person()    // x1234(메모리 주소)
+
+p.name              // 사람
+
+p.name = "혜리"      // Person
+
+p.name              // 혜리
+
+var p2 = p          // (클래스)     // x1234(p의 메모리 주소)
+
+p2.name             // 혜리
+
+p2.name = "수진"     // Person
+
+p2.name             // 수진
+
+
+
+```
+
+##### 메모리 주소가 동일한 게 담겨 있기 때문에 결국 가리키는 것은 어느 하나의 데이터.
+
+```
+p.name              // 수진
+
+```
+
+```
+struct Animal {
+
+    var name = "동물"
+}
+
+```
+
+> 구조체의 변수를 복사하는 경우에는 무조건 데이터를 복사해서
+
+새로 담는 것이기 때문에 각각의 데이터가 새롭게 생성된다.
+
+즉, 클래스는 주소를 복사하고 구조체는 데이터 자체를 복사한다는 것이다.
+
+그래서 클래스는 새로운 변수로 바인딩 하더라도 동일한 데이터를 가리키고
+
+구조체는 데이터가 새롭게 생성되므로 각각의 데이터로 남게 된다.
+
+```
+var a = Animal()        // Animal
+
+a.name                  // "동물"
+
+var a2 = a              // (구조체)
+
+a.name = "강아지"         // Animal
+
+a.name                  // 강아지
+
+a2.name                 // 동물
+
+```
+
+- a에 "강아지"를 할당하자 클래스와는 다르게 a와 a2는 서로 name이 달라짐
+
+- 데이터 자체를 복사.
+
+- 즉 a의 name인 "동물"과 a2의 name인 "동물"은 서로 다른 데이터.
+
+> ###### 구조체는 클래스에 비해 훨씬 더 가볍다. 그래서 많은 경우에 구조체를 사용한다.
+
+- 클래스는 구조체에 비해 조금 더 무겁다. 왜냐하면 힙이라는 영역에 저장하기 때문이다.
+
+- 힙의 메모리 영역은 데이터를 조금 더 길게 저장하기 위해 사용한다.
+
+- 실제로 메모리에 데이터를 생성시 스택에서 생성하는 것보다 조금 더 오래 걸린다.
