--- a/Swift/11.클래스와 구조체/클래스와 구조체 1.md
+++ b/Swift/11.클래스와 구조체/클래스와 구조체 1.md
@@ -307,3 +307,145 @@ a2.name                 // 동물
 - 힙의 메모리 영역은 데이터를 조금 더 길게 저장하기 위해 사용한다.
 
 - 실제로 메모리에 데이터를 생성시 스택에서 생성하는 것보다 조금 더 오래 걸린다.
+
+### 클래스와 구조체의 let과 var키워드
+
+```
+class PersonClass {
+
+    var name = "사람"
+
+    var age = 0
+}
+
+
+
+struct AnimalStruct {
+
+    var name = "동물"
+
+    var age = 0
+}
+
+
+
+let pclass = PersonClass()      // PersonClass
+
+pclass.name = "사람1"            // PersonClass
+
+pclass.name                     // "사람1"
+
+
+
+let astruct = AnimalStruct()    // animalStruct
+
+// astruct.name = "동물1"        // 에러 발생(Cannot assign to property: 'astruct' is a 'let' constant)
+
+astruct.name                    // 동물
+
+```
+
+> 상수로 바인딩 했음에도 "사람1"을 할당하자 데이터가 변하는 것을 확인할 수 있다. 반면, 구조체에서는 변하지 않는다.
+
+구조체의 경우 상수로 선언하게 되면 속성 모두가 상수로 변하게 된다.
+
+메모리 구조가 스택에 생기기 때문이다.
+
+반면, 클래스의 경우에는 메모리 주소를 상수로 선언한다는 뜻이다.
+
+즉, 메모리 주소를 변경할 수 없다는 뜻이다.
+
+그래서 다른 객체를 가리킬 수 없다.
+
+새로운 객체를 가리킬 수 있는 새로운 주소를 메모리에 저장할 수 없다는 의미이다.
+
+반면에 속성은 변경이 가능하다. 왜냐하면 변수로 선언이 되어있기 때문이다.
+
+구조체의 경우에는 구조체 자체의 속성도 상수로 바인딩 되는 것이고
+
+클래스의 경우에는 클래스 자체의 속성이 아닌 메모리 주소가 상수로 바인딩 되는 개념이다.
+
+### 접문법 / 명시적 멤버 표현식(Explicit Member Expression)의 정확한 의미
+
+- 내부의 요소. 즉, 클래스, 구조체의 인스턴스의 멤버에 접근한다.
+
+- 멤버는 속성, 메서드를 포함
+
+- 접문법이라는 것은 "하위에 있는 멤버다" 라는 개념을 클래스와 구조체를 통해서 이해.
+
+- 하위에 있는 속성이나 메서드를 가리킨다 라고 이해하면 충분하다.
+
+```
+pigeon.fly()
+
+"공중날기"
+
+```
+
+> ###### 문자열 조차도 구조체로 만들어저 있다.
+
+그래서 실제로는 메모리에 인스턴스를 찍어내는 행위와 같다.
+
+메모리에 찍어냈기 때문에 문자열이라는 구조체의 하위개념에 해당하는
+
+점을 찍고 예를 들어 count같은 행위들을 할 수 있게 되는 것이다.
+
+### 관습적인 부분들에 대한 이해
+
+##### 일반적으로 클래스, 구조체 선언할때 모두
+
+- 1.  속성
+
+- 2.  메서드 순서대로 작성
+
+```
+class Dog1 {
+
+    var name = "강아지"
+
+    var weight = 0
+
+    func sit() {
+
+        print("앉았습니다.")
+    }
+
+    func layDown() {
+
+        // sit()    이런 경우는 가능. 클래스 내부에 있기 때문에
+
+        print("누웠습니다.")
+    }
+
+    // sit() 클래스 외부에 있기 때문에 실행 불가
+}
+
+```
+
+#### _주의점 - (참고) 클래스 내부에는 직접 메서드(함수) 실행문이 올 수 없다. ⭐️_
+
+- 메서드 실행문은 메서드의 정의문 내에 존재해야함
+
+- 처음 코딩하면서 자주 실수하는 부분임에 유의
+
+### ⭐️ 정리
+
+클래스의 경우 변수는 스택 영역에 생성이 되고 메모리 주소를 담고 있지만,
+
+실제 데이터는 힙의 영역에 생성이 된다.
+
+반면에 구조체의 경우에는 메모리 생성을 아예 스택에다가 해버린다.
+
+그래서 메모리 복사에서도 차이가 생긴다.
+
+구조체는 복사를 할때 데이터 자체를 복사해 버린다.
+
+반면에 클래스의 경우 복사를 할때 데이터 자체가 아닌
+
+메모리 주소를 복사해서 같은 데이터를 가리킨다.
+
+그래서 클래스의 경우에는 상수로 선언하면 메모리 주소를 변경할 수 없게 되고
+
+구조체의 경우에는 상수로 선언하면 전체 내부의 속성,
+
+즉 변수가 상수로 바인딩 되는 것이다.
