클래스와 구조체

--- a/Swift/11.클래스와 구조체/클래스와 구조체.md
+++ b/Swift/11.클래스와 구조체/클래스와 구조체.md
@@ -95,7 +95,9 @@ shin.layDown()
 
 - 구조체의 정의와 instance의 생성
 
-// 붕어빵틀 만들기
+##### 붕어빵틀 만들기
+
+```
 
 struct Bird {
 
@@ -109,6 +111,8 @@ struct Bird {
     }
 
 }
+
+```
 
 ##### 붕어빵 찍어내기 (인스턴스의 생성)
 
@@ -182,7 +186,84 @@ pigeon.fly()
 
 #### _⭐️ 가장 큰 차이는 메모리 저장 방식의 차이 ⭐️(중요)_
 
-##### 1. 구조체
+> #### 메모리 구조
+
+| 영역   | 내용                                                                             |     |
+| ------ | -------------------------------------------------------------------------------- | --- |
+| 코드   | 앱 실행시, 모든 코드가 일단 코드 영역에 올라감. 그리고 순차적으로 한줄씩 실행됨. |     |
+| 데이터 | 전역변수 및 타입속성 저장(어디서도 접근 가능한 데이터)                           |     |
+| 힙     | 참조타입(클래스의 객체, 클로저)                                                  |     |
+| 스택   | 함수의 실행시 필요 데이터가 생성, 사용 완료후 사라짐(Value 타입)                 |     |
+
+##### 1. 클래스
+
+- 참조 형식(Reference Type)
+
+- 인스턴스 데이터는 힙(Heap)에 저장, 해당 힙을 가르키는 변수는 스택에 저장하고
+
+- 메모리 주소값이 힙(Heap)을 가르킴
+
+- (복사시) 값을 전달하는 것이 아니고, 저장된 주소를 전달
+
+- 힙(Heap)의 공간에 저장, ARC 시스템을 통해 메모리 관리(주의해야함)
+
+- 참고: 스택은 데이터를 차곡 차곡(적층) 쌓지만, 힙은 데이터를 군데 군데(따로 따로) 저장
+
+- 스택의 영역에 실제로 생성된 변수가 생기고(메모리 주소만 담김. 그림 참조), 메모리 주소가 담기고, 그 주소가 힙의 영역을 가리킨다.
+
+> 클래스를 생성하게 되면 메모리 공간의 데이터 영역에 존재를 한다.
+
+즉, 데이터 영역에 클래스의 실제 데이터(Dog())가 존재한다.
+
+그리고 클래스의 인스턴스를 하나씩 찍어내면 메모리 영역 중 힙의 영역에 데이터들을 찍어 낸다.
+
+또한 클래스의 인스턴스들은 데이터 영역의 실제 데이터(Dog())의 메모리 주소를 가리킨다.
+
+그리고 실제로 찍어낸 인스턴스들은 힙의 영역에 존재하지만, 각각의 영역에 존재하는 메모리 주소를 변수에 담는다.
+
+###### 클래스(틀): 예시) Dog() 찍어 낸다 ---> 객체(실제 데이터)
+
+###### 클래스(틀): 데이터 영역에 저장
+
+###### 객체(실제 데이터): 힙의 영역에 저장
+
+```
+
+class Dog {
+
+    var name = "강아지"
+
+    var weight = 0
+
+    func sit() {
+
+        print("앉았습니다.)
+    }
+
+    func layDown() {
+
+        print("누웠습니다.)
+    }
+
+
+}
+
+var bori = Dog()        // var bori <-- 변수는 스택의 영역에 생성. 실제 데이터는 힙의 영역에 저장
+
+                        // var bori =  Dog() <-- 힙의 영역에 생성. 힙에 영역에 만들어진 데이터의 '메모리 주소를 변수(bori)에다가 담는다.
+
+
+var choco = Dog()
+
+
+bori != choco <-- 각각의 서로 다른 데이터 묶음(각각 실제 카톡 친구 목록)
+
+
+
+
+```
+
+##### 2. 구조체
 
 - 값 형식(Value Type)
 
@@ -198,23 +279,52 @@ pigeon.fly()
 
 - 스택의 영역에 저장된다는 뜻은 함수가 실행되는 동안에만 존재한다는 뜻이다.
 
-##### 2. 클래스
+> 구조체의 데이터는 클래스와 다르게 힙의 영역에서 찍어내지 않는다.
 
-- 참조 형식(Reference Type)
+클래스와 동일하게 메모리의 데이터 영역에 구조체의 원형(Bird())이 존재하고, 실제로 찍어낸 데이터(인스턴스)가 스택의 영역에 저장이 된다. 함수의 실행시 데이터가 생성되고 완료 후 사라진다. 즉, 함수가 실행되는 동안에만 존재한다는 뜻이다.
 
-- 인스턴스 데이터는 힙(Heap)에 저장, 해당 힙을 가르키는 변수는 스택에 저장하고
+```
+struct Bird {
 
-- 메모리 주소값이 힙(Heap)을 가르킴
+    var name = "새"
 
-- (복사시) 값을 전달하는 것이 아니고, 저장된 주소를 전달
+    var weight = 0.0
 
-- 힙(Heap)의 공간에 저장, ARC 시스템을 통해 메모리 관리(주의해야함)
+    func fly() {
 
-- 참고: 스택은 데이터를 차곡 차곡(적층) 쌓지만, 힙은 데이터를 군데 군데(따로 따로) 저장
+        print("날아갑니다.")
 
-- 스택의 영역에 실제로 생성된 변수가 생기고(메모리 주소만 담김. 그림 참조),
+    }
 
-메모리 주소가 담기고, 그 주소가 힙의 영역을 가리킨다.
+}
+
+func dosomething() {
+    var aBird = Bird() <--- 인스턴스(실제 데이터)
+
+aBird.name = "참새1"
+
+aBird.weight
+
+aBird.fly()
+
+
+var bBird = Bird()
+
+bBird.name = "참새2"
+
+bBird.weight
+
+bBird.fly()
+
+// abird != bBird <--- 각각의 서로 다른 데이터 묶음(각각 실제 카톡 친구 목록)
+
+}
+
+
+
+
+
+```
 
 ### 클래스와 구조체의 메모리
 
