--- a/Swift/11.클래스와 구조체/클래스와 구조체.md
+++ b/Swift/11.클래스와 구조체/클래스와 구조체.md
@@ -248,7 +248,7 @@ class Dog {
 
 }
 
-var bori = Dog()        // var bori <-- 변수는 스택의 영역에 생성. 실제 데이터는 힙의 영역에 저장
+var bori = Dog()        // var bori <-- 변수는 스택의 영역에 생성. 실제 데이터(객체)는 힙의 영역에 저장
 
                         // var bori =  Dog() <-- 힙의 영역에 생성. 힙에 영역에 만들어진 데이터의 '메모리 주소를 변수(bori)에다가 담는다.
 
@@ -299,6 +299,7 @@ struct Bird {
 }
 
 func dosomething() {
+
     var aBird = Bird() <--- 인스턴스(실제 데이터)
 
 aBird.name = "참새1"
@@ -359,7 +360,6 @@ p2.name             // 혜리
 p2.name = "수진"     // Person
 
 p2.name             // 수진
-
 
 
 ```
