--- a/Swift/11.클래스와 구조체/초기화.md
+++ b/Swift/11.클래스와 구조체/초기화.md
@@ -30,17 +30,17 @@ var charmander = Charmander()
 
 charmander.name
 
-bori.levels
+charmander.levels
 
 
 
-bori.name = "구버전 파이리"
+charmander.name = "구버전 파이리"
 
-bori.name
+charmander.name
 
-bori.levels = 15
+charmander.levels = 15
 
-bori.levels
+charmander.levels
 
 
 ```
@@ -104,9 +104,7 @@ charmander.skill2()
 
 - var charmander = Charmander() 불가. 모든 속성(변수)에 값을 넣어야 함.
 
-- 클래스(구조체도 동일)를 찍어낼 때 타입을 선언하였기 때문에
-
-- 구체적인 데이터가 반드시 존재해야 한다.
+- 클래스(구조체도 동일)를 찍어낼 때 타입을 선언하였기 때문에 구체적인 데이터가 반드시 존재해야 한다.
 
 ##### 초기화 메서드 / 이니셜라이저
 
@@ -204,3 +202,72 @@ print(charmander === charmander1)
 print(charmander !== charmander1)
 
 ```
+
+## 정리
+
+### 초기화(initializer)
+
+- 초기화의 생성자
+
+```
+class Dog {
+
+    var name: String
+
+    var weight: Double
+
+    /* 초기화 메서드
+
+
+    init(name: String, weight: Double) {
+
+        self.name = name
+
+        self.weight = weight
+    }
+
+    */
+}
+
+```
+
+#### 초기화 메서드
+
+- 함수의 구현이 특별한 키워드인 init으로 명명됨
+
+- 인스턴스 생성 과정: 저장 속성에 대한 초기값을 설정하여 사용 가능한 상태가 되는 것
+
+- 생성자 메서드 실행의 목적은, 모든 저장 속성 초기화를 통한 인스턴스 생성
+
+_즉, 생성자 실행의 종료 시점에는 모든 저장 속성에 값이 저장 되어 있어야 함_
+
+- 설계도(클래스, 구조체, 열거형)를 실제로 사용하기 위해 인스턴스로 찍어내는 과정
+
+- _생성자 실행시, 메모리 내에 실제 인스턴스를 생성하는 복잡한 코드가 (자동)구현된다고 생각하면 됨_
+
+##### 오버로드 지원
+
+- 다양한 파라미터 조합으로 생성자를 여러개 구현 가능
+
+- 여러가지 방식으로 인스턴스를 생성하는 방법을 제공
+
+## 구조체와 클래스의 차이
+
+| 구분           | 구조체(struct)                                                    | 클래스(class)                                                                           |
+| -------------- | ----------------------------------------------------------------- | --------------------------------------------------------------------------------------- |
+| 타입           | Value Type(값 형식)                                               | Reference Type(참조 형식)                                                               |
+| _메모리 관련_  | 값의 저장: Stack / 복사 전달(메모리에서 자동 제거                 | 값의 저장: Heap / 주소 전달(ARC로 관리)                                                 |
+| let / var 선언 | 인스턴스 상수(let)로 선언시 저장 속성이 전부 상수로 선언됨        | 인스턴스 상수(let)로 선언하면 가리키는 인스턴스 고정(저장 속성은 각 let/var 선언에 따름 |
+| 생성자 관련    | 멤버와이즈 이니셜라이저 (자동)제공                                | 편의 생성자 존재                                                                        |
+| 메서드 + 속성  | 메서드 내에서 속성 변경 원칙적으로 불가능(mutating 키워드로 가능) | 메서드 내에서 속성 변경 가능                                                            |
+| 소멸자         | 소멸자 없음                                                       | 소멸자 있음                                                                             |
+| 상속 가능 여부 | 상속 불가능                                                       | 상속 가능(클래스가 유일)                                                                |
+
+## 값 형식과 참조 형식
+
+| 구분                  | 값 형식(구조체)                                                   | 참조 형식(클래스)                                                          |
+| --------------------- | ----------------------------------------------------------------- | -------------------------------------------------------------------------- |
+| _타입_                | _Value Type_                                                      | _Reference Type_                                                           |
+| 메모리 상의 저장 위치 | 필요시에 항상 메모리의 값이 복사되어 전달. _값의 저장: Stack_     | 필요시에 항상 메모리의 주소를 전달. _값의 저장: Heap(주소를 Stack에 저장)_ |
+| 메모리 관리 방식      | 값이 들어 있는 스택의 스코프가 종료되면 메모리에서 자동 제거      | RC(Reference Counting)을 통해 메모리를 관리. Swift에서 사용하는 ARC 모델   |
+| 각 형식의 타입 예시   | 스위프트 기본 타입(Int, String....), 튜플, 열거형, 컬렉션, 구조체 | 클래스, 클로저                                                             |
