--- a/Swift/11.클래스와 구조체/속성.md
+++ b/Swift/11.클래스와 구조체/속성.md
@@ -16,6 +16,15 @@
 
 바로 저장 속성이라고 한다.
 
+#### 저장 속성
+
+- 클래스 / 구조체의 틀에서 찍어낸 각 인스턴스가 가지는 고유의 데이터 공간
+
+- 변수(var)나 상수(let)로 선언 가능
+
+- 객체의 초기화시, 각 저장 속성은 반드시 값을 가져야함
+- _기본값을 설정하거나 또는 생성자에서 설정, 또는 옵셔널 타입으로 선언하여 nil로 초기값을 갖는 것으로 설정 가능_
+
 ```
 struct Bird {
 
@@ -26,6 +35,10 @@ struct Bird {
     init(name: String, weight: Double) {
 
         // 기본값이 없으면, 생성자를 통해 값을 반드시 초기화해야함
+
+        // self.name == 변수(실제 데이터)의 name. var name
+
+        // name == 파라미터(매개변수)의 name. init(name: String)
 
         self.name = name
 
