지연 저장 속성

--- a/Swift/11.클래스와 구조체/속성.md
+++ b/Swift/11.클래스와 구조체/속성.md
@@ -23,7 +23,10 @@
 - 변수(var)나 상수(let)로 선언 가능
 
 - 객체의 초기화시, 각 저장 속성은 반드시 값을 가져야함
+
 - _기본값을 설정하거나 또는 생성자에서 설정, 또는 옵셔널 타입으로 선언하여 nil로 초기값을 갖는 것으로 설정 가능_
+
+- 열거형의 경우 따로 메모리 공간이 필요한 저장 속성(데이터)은 선언할 수 없음
 
 ```
 struct Bird {
@@ -85,9 +88,7 @@ struct Bird1 {
 
     var name: String
 
-    // 처음에는 메모리 공간이 없다가 나중에 인스턴스를 선언할 떄 메모리 공간을 생성
-
-    // 하므로, 즉 변화하는 식별자이므로 let으로 선언할 수가 없다.
+    // 처음에는 메모리 공간이 없다가 나중에 인스턴스를 선언할 떄 메모리 공간을 생성 하므로, 즉 변화하는 식별자이므로 let으로 선언할 수가 없다.
 
     // 지연 저장 속성은 무조건 초기 값을 가져야 한다.
 
