메서드의 메모리 구조

--- a/Swift/11.클래스와 구조체/속성.md
+++ b/Swift/11.클래스와 구조체/속성.md
@@ -203,6 +203,39 @@ class AView {
 
 - (클로저의 실행문 부분도 연결해서 설명 예정)
 
+## 메서드의 메모리 구조의 이해
+
+> 강의 내용 요약해서 정리할것(미완성)
+
+```
+class Dog {
+
+    var name: String
+
+    var weight: Int
+
+    init(name: String, weight: Int) {
+
+        self.name = name
+
+        self.weight = weight
+    }
+
+    func sit() {
+
+        print("\(self.name)가 앉았습니다.)
+
+    }
+
+    func layDown() {
+
+        print("\(self.name)가 누웠습니다.)
+
+    }
+}
+
+```
+
 ## 2) 계산속성(Computed Properties)
 
 - 계산속성이라는 것이 왜 필요할까?
