--- a/Swift/11.클래스와 구조체/속성.md
+++ b/Swift/11.클래스와 구조체/속성.md
@@ -240,6 +240,31 @@ class Dog {
 
 - 계산속성이라는 것이 왜 필요할까?
 
+#### 계산 속성 예시
+
+```
+class Person {
+
+    var birth: Int = 0
+
+    func getAge() -> Int {
+
+        return 2021 - birth
+    }
+
+    func setAge(_ age: Int) {
+
+        self.birth = 2021 - age
+
+    }
+
+}
+
+var p1 = Person()
+
+p1.birth = 2000
+```
+
 ##### 값이 저장되는 일반적인 속성(변수)을 저장 속성이라고 함
 
 - 그동안 우리가 배운 속성은 정확한 의미에서 "저장 속성"이었음: ====> 앞으로 저장 속성이 아닌 것을 배우게 됨
