--- a/Swift/11.클래스와 구조체/메서드.md
+++ b/Swift/11.클래스와 구조체/메서드.md
@@ -279,3 +279,121 @@ SomeThingClass.someTypeMethod()
 > #### _class: 상속시 재정의 가능 키워드_
 
 - static 키워드로 선언하면 (상속시)재정의 불가 (상속이 불가한 것 아님)
+
+## 3) 서브스크립트
+
+- 서브스크립트(Subscripts) - (배열, 딕셔너리에서 이미 경험)
+
+> ##### 서브스크립트?
+
+- 대괄호를 이용해서 접근가능하도록 만든 문법을 가르킴
+
+- 배열: array[인덱스]
+
+- 딕셔너리: dictionary[키]
+
+```
+var array = ["Apple", "Swift", "iOS", "Hello"]
+
+
+array[0]
+
+array[1]
+
+```
+
+- 내부적으로 대괄호를 사용하면 어떤 값을 리턴하도록 구현이 되어 있어서 가능한 일
+
+- 인스턴스.0
+
+- 인스턴스.method() =====> 이런 형태가 아닌
+
+- 인스턴스[파라미터] =====> 이런 형태로 동작을 가능하게한 문법 (대괄호로 메서드의 기능을 대신)
+
+> #### _서브스크립트는 특별한 형태의 메서드_
+
+### 1) (인스턴스) 서브스크립트(Subscripts)의 직접 구현 - 클래스, 구조체, (열거형)
+
+- 인스턴스 메서드로써의 서브스크립트 구현
+
+```
+class SomeData {
+
+    var datas = ["Apple", "Swift", "iOS", "Hello"]
+
+
+    subscript(index: Int) -> String {     // 1) 함수와 동일한 형태이지만, 이름은 subscript
+        get {                             // 2) get/set은 계산속성에서의 형태와 비슷
+            return datas[index]
+        }
+        set(parameterName) {
+            datas[index] = parameterName         // 또는 파라미터 생략하고 newValue로 대체 가능(계산 속성의 setter와 동일)
+        }
+    }
+
+}
+
+var data = SomeData()
+
+data[0]
+
+// data[0] = "AAA"
+
+
+
+// 파라미터 생략 불가(값이 반드시 필요)
+
+// 리턴형도 생략 불가능(저장할 값의 타입 명시 필요)
+
+// 읽기 전용(read-only)으로 선언 가능 (set블록은 선택적으로 구현이 가능하고, 쓰기 전용으로의 선언은 불가)
+
+
+Int.random(in: 1...10)
+
+```
+
+### 서브스크립트 사용 예시 - 대괄호 형태로 사용하는 메서드이다.
+
+```
+struct TimesTable {
+    let multiplier: Int = 3
+
+    subscript(index: Int) -> Int {
+        return multiplier * index
+    }
+}
+
+
+let threeTimesTable = TimesTable()
+
+print("6에 3배를 하면 숫자 \(threeTimesTable[6]) 이(가) 나옵니다.")
+
+
+
+
+
+
+struct Matrix {
+    // 2차원 배열
+    var data = [["1", "2", "3"], ["4", "5", "6"], ["7", "8", "9"]]
+
+    // 2개의 파라미터를 받는 읽기전용 서브스크립트의 구현
+    subscript(row: Int, column: Int) -> String? {
+        if row >= 3 || column >= 3 {
+            return nil
+        }
+        return data[row][column]
+    }
+}
+
+
+// 2개의 파라미터를 받는 서브스크립트 구현도 가능
+
+
+var mat = Matrix()
+
+mat[0, 1]!     // 대괄호 안에 파라미터 2개 필요
+
+
+
+```
