--- a/Swift/3.조건문/연습문제 1.md
+++ b/Swift/3.조건문/연습문제 1.md
@@ -4,7 +4,7 @@
 
 - 내가 선택한 것과 컴퓨터가 랜덤으로 선택한 것을 비교
 
-> #### _첫번쨰 아이디어: 그냥 공책에다가 순서쌍을 만들어 보았다._
+> #### _첫번쨰로 떠오른 아이디어: 그냥 공책에다가 순서쌍을 만들어 보았다._
 
 #### 조건
 
@@ -220,3 +220,5 @@ if myChoice == 0 {
 }
 
 ```
+
+> #### _만들어 보고 나니 떠오른 생각: 매우 간단한 연산으로 처리할 수 있는 코드이니 순서쌍으로 처리할 수 있지만 실제 앱을 개발하면 이보다 더 복잡한 논리 구조를 처리 해야 할것이니 결국 조건문의 논리적 구조에 대한 여러 가지 코드를 분석하면서 조건문의 코드를 보다 논리적으로 간결하게 처리할 수 있는 능력이 훨씬 더 중요하다는 것을 알게 되었다._
