--- a/Swift/7.함수/함수 3.md
+++ b/Swift/7.함수/함수 3.md
@@ -45,7 +45,88 @@ print(num3)
 
 ```
 
-#### 함수의 실행
+> ### 컴파일 된 경우
+
+```
+print:
+
+ ...
+ ...
+ ...
+
+
+
+
+
+addTwoNumbers:
+
+임시공간을 만든다.
+a라는 상수에 Int(값)을 저장한다.
+b라는 상수에 Int(값)을 저장한다.
+c라는 변수 공간을 만든다.
+a + b를 더해서 임시값을 가진다.
+임시값을 c에 저장한다.
+c를 리턴(반환)한다.
+
+MAIN:
+
+num1 이라는 변수에 5를 저장한다.
+num2 이라는 변수에 3을 저장한다.
+num3 이라는 변수 공간을 만든다.
+(num1과, num2를 이용) addTwoNumbers 함수를 실행 -> 실행하는 함수의 스택에 주소 저장 -> 함수를 찾아감
+결과값을 num3 공간에 저장한다.
+(num3을 이용) print 함수를 실행
+```
+
+> ### 항상 프로그램을 실행 시키면 main 함수 영역이 생성된다.
+
+- 왜냐하면 프로그램을 실행을 시키면 CPU는 어디서 부터 실행 시킬지 어떤 줄의 명령어부터 실행시킬지 알아야 하기 때문에 MAIN 영역을 생성한다.
+
+- 그래서 앱을 실행시키면 CPU는 MAIN 영역을 찾아가서 코드를 순차적으로 실행한다.
+
+- 그리고 실행하는 함수의 스택에 주소를 저장한다.
+
+- CPU는 주소를 저장해야 한다.왜냐하면 함수를 실행하고 다시 제자리로 돌아와야 하기 때문이다.
+
+- 함수를 찾아간뒤 그 함수를 실행한다.
+
+- CPU가 함수를 순차적으로 코드를 실행한다.
+
+- 함수를 모두 실행하고 나면 CPU가 제어권(코드를 실행시키는 것)과 값(return)도 main() 영역에 돌려주게된다.
+
+- 그리고 다시 main() 영역에서 다시 코드를 순차적으로 실행 시킨다.
+
+### 과정:
+
+- CPU가 메모리에서 MAIN 영역을 실행 시킴
+
+- 그 결과 스택에서 main() 함수의 영역 생성: 스택 프레임
+
+- 스택 프레임: main 함수가 실행될 영역의 공간을 만든다는 것
+
+- 순차적으로 코드를 실행시킨뒤(num1 -> num2 -> ...) 함수를 실행시키면 마치 층을 쌓듯이 올라가서 함수(addTwoNumbers) 라는 또다른 스텍프레임을 생성한다.
+
+- 스택프레임 생성후 CPU는 저장된 주소를 통해 함수를 찾아간다.
+
+- 찾아간뒤 제일 먼저 복귀주소를 함수에 저장한다. 함수를 종료시킨뒤 다시 코드를 실행시키기 위해 어디로 찾아가야할지에 대한 명령어의 주소를 저장한다.
+
+- 그런 다음 함수값 / 임시값에 대한 임시공간을 만든다. 임시공간을 만드는 이유는 addTwoNumbers 함수의 경우 리턴 타입이 있는 경우이므로 결과값을 반환해야 하기 때문이다. 리턴 타입이 없는 함수의 경우 이러한 공간을 만들지 않는다. 반환할 필요가 없기 때문에.
+
+- 그런 다음 파라미터의 공간을 형성한다. 파라미터는 상수로 선언되었기 때문에 변경 X
+
+- a(let a = 5)와 b(let b = 3)를 더하고 그 값을 c(var c = a + b)에 저장한다.
+
+- 그런 다음 return을 만나고 임시공간에 8을 저장이된다.
+
+- 함수의 실행이 끝나면 함수의 스택프레임(addTwoNumbers)이 사라지고, 8이라는 값을 반환을 하면서 main() 함수 영역을 찾아가고 num3에 값을 저장한다.
+
+- 그런 다음 print를 실행한다. print도 함수이기 때문에 MAIN 영역에서 Print 함수의 영역을 찾아간다. 그렇기 때문에 복귀주소를 저장하고 함수의 실행에 필요한 메모리 공간을 사용한다. print 함수가 종료되면 스택프레임이 사라진다.
+
+- 프로그램이 종료되면 main() 영역 역시 사라진다.
+
+### 정리:
+
+Stack: 차곡 차곡 아래에서부터 쌓이고, 제거 할때는 위에서부터 제거할 수 있는 구조
 
 함수의 실행이란 그 함수 자체가 필요한 메모리 공간,
 
