함수 실행의 메모리 구조 2

--- a/Swift/7.함수/함수 3.md
+++ b/Swift/7.함수/함수 3.md
@@ -47,6 +47,8 @@ print(num3)
 
 > ### 컴파일 된 경우
 
+> #### 코드 영역: 앱 실행시 모든 코드가 일단 코드 영역에 올라감. 순차적으로 코드 실행
+
 ```
 print:
 
@@ -182,9 +184,78 @@ startFunction()
 
 ```
 
+### startFunction() 함수의 실행 메모리 구조
+
+> #### 코드: 앱 실행시 모든 코드가 일단 코드 영역에 올라감. 순차적으로 코드 실행
+
+```
+square 함수:
+
+상수를 선언
+두 수를 곱한다.
+리턴한다.
+
+squreOfSum 함수:
+
+상수 2개를 선언
+변수를 하나 만듦
+square()
+값을 저장
+리턴한다.
+
+startFunction함수:
+변수 2개를 선언/값저장
+squareOfSum(...)
+
+main()
+var total: Int = 0
+startFunction()
+
+```
+
+> #### 과정:
+
+- var total: Int = 0을 전역변수라고 가정
+
+- main() 함수를 찾아감. 스택 프레임 생성
+
+- 전역변수를 생성. 데이터 영역에 저장 total = 0
+
+- startFunction() 함수를 실행. 스택 프레임 생성
+
+- 변수 2개를 선언하고 값을 저장. 복귀 주소 역시 당연히 저장됨.
+
+- squareOfSum() 함수 주소를 찾아가서 실행. squareOfSum() 함수 스택프레임 생성
+
+- squareOfSum() 함수가 리턴형이 있기때문에 임시값을 만든다.
+
+- 파라미터 x(let x = 4), y(let y = 8) 생성
+
+- 변수 생성(var z = square(x + y)
+
+- square() 함수를 찾아감. square() 함수 스택프레임 형성
+
+- 임시공간 생성(리턴), i(let i = 12) 생성. 결과값( i _ i = 12 _ 12) 생성
+
+- 결과를 리턴하면서 squareOfSum() 함수의 z에 저장.
+
+- square() 함수 종료. 스택프레임 제거. 리턴값을 임시공간에 저장
+
+- startFunction에 임시값을 전달. squareOfSum() 함수 스택프레임 제거
+
+- 결과값 144를 데이터 영역의 있는 전역변수 total에 저장
+
+- startFuntion 함수 종료
+
+> ##### 정리:
+
 - 데이터 영역과 힙 영역은 공유되는 부분. 그래서 어디에서나 접근 가능
 
 - 그러나 스택 영역은 공유되는 부분이 아니다.
+
+- 그래서 스택프레임은 자기 내부에서만 변수를 사용할 수 있다.
+
+> ##### 스택프레임이라는 고유의 공간의 개념이 바로 Scope에 대한 이해.
 
 ### 함수와 변수의 변화 예제
 
@@ -196,16 +267,23 @@ var b = 1       // 실제 전역변수라면
 
 
 func addOneMore2() -> Int {
+
     b += 1
+
     return 5
 }
 
 
 func addOneMore1() {
+
     var num = 0
+
     a += 1
+
     num += addOneMore2()
+
     print(num)
+
 }
 
 
@@ -213,6 +291,59 @@ func addOneMore1() {
 addOneMore1()
 
 ```
+
+### 정리
+
+> #### 코드: 앱 실행시, 모든 코드가 일단 코드영역에 올라감. 그리고 순차적으로 한줄씩 실행
+
+```
+print 함수:
+
+출력하기
+
+addOneMore2함수:
+
+b에 1 더하기
+5를 리턴
+
+addOneMore1함수:
+
+변수 1개를 선언/값저장
+a에 1 더하기
+addOneMore2()
+print()
+
+main()
+
+var a = 1
+var b = 1
+addOnemore1()
+
+```
+
+> #### 과정:
+
+- main() 함수가 실행이 되고 전역변수가 순차적으로 데이터 영역에 저장
+
+- var a = 1, b = 2. 데이터와 힙 영역은 공유되는 영역
+
+- addOneMore() 함수 실행. 스택프레임 형성
+
+- 프레임 내부에서 num = 0 형성
+
+- a에 1을 더함 var a = 2
+
+- addOneMore2() 함수 실행. 스택프레임 형성. 리턴형이 있으므로 임시공간 생성
+
+- b에 1을 더함 var b = 2
+
+- 5를 리턴. addOneMore2() 함수 실행 종료. 스택프레임 제거
+
+- num에 5를 저장
+
+- print(num) 실행. print 함수 이므로 주소를 찾아간뒤 print() 스택 프레임 형성
+
+- print(num) 함수 종료. 순차적으로 main() 함수 역시 종료
 
 ## 조건문과 반복문의 명령어(CPU)구조
 
