--- a/Swift/7.함수/함수 3.md
+++ b/Swift/7.함수/함수 3.md
@@ -369,11 +369,55 @@ someConditionalStatement(a: -3)
 
 ```
 
-- 스택 프레임을 만드는 것은 함수의 실행일뿐이다.
+- ##### 스택 프레임을 만드는 것은 함수의 실행일뿐이다.
 
-- 스택 프레임을 만들고 그 안에 메모리 공간을 만드는 것은 오직 함수의 실행만 해당함.
+- ##### 스택 프레임을 만들고 그 안에 메모리 공간을 만드는 것은 오직 함수의 실행만 해당함.
 
-- 조건문이나 반복문은 스택 프레임을 만드는 행위가 아니다.
+- ##### 조건문이나 반복문은 스택 프레임을 만드는 행위가 아니다.
+
+### 정리
+
+```
+코드:
+
+ main() {
+
+ var c = 0
+
+ func someConditionalStatement(a: Int) {
+
+     if a >= 0 {
+
+         c += 1
+
+     } else {
+
+         c += 7
+     }
+ }
+
+ }
+
+ -> 컴파일:main()부터 실행
+
+ someConditionalStatement:
+
+ a 상수를 만든다.
+ a와 0을 비교한다.
+ 비교결과가 작으면 (두줄) 점프한다.
+ c에 1을 더한다.
+ 한줄 점프한다.
+ c에 7을 더한다.
+ 리턴한다.
+
+ MAIN:
+
+ c라는 변수공간을 만들고 0을 저장한다.
+ someConditonalStatement 함수를 실행
+
+ */
+
+```
 
 ### 반복문
 
@@ -390,5 +434,44 @@ func someLoop() {
 
 
 someLoop()
+
+```
+
+### 정리
+
+```
+코드:
+
+ main() {
+
+ var d = 0
+
+ func someLoop() {
+     for i in 1...5 {
+         d += i
+     }
+ }
+
+
+ someLoop()
+
+ }
+
+ -> 컴파일:main()부터 실행
+
+ someLoop:
+
+ i 상수를 만든다.
+ 1을 생성한다.
+ 숫자를 상수에 넣는다.
+ d에 1을 더한다.
+ 5라면 (한줄) 넘어가서 끝낸다.
+ 상수에 1을 더하고 시작으로 돌아간다.
+ 리턴한다.
+
+ MAIN:
+
+ d라는 변수공간을 만들고 0을 저장한다.
+ someLoop 함수를 실행
 
 ```
