--- a/Swift/7.함수/연습문제 1.md
+++ b/Swift/7.함수/연습문제 1.md
@@ -19,3 +19,85 @@ chooseRandomString("abcdefg")
 ## 2) 소수를 판별하는 함수
 
 - 소수, 즉 1과 자기 자신만으로 나누어 떨어지는 1보다 큰 양의 정수를 판별하는 함수를 만들어보기
+
+```
+// 소수판별을 for문으로 구현하기
+
+var num = 97
+
+var isPrime: Bool = true   // 깃발
+
+
+for i in 2..<num {
+
+    if num % i == 0 {
+        isPrime = false
+        break
+    }
+}
+
+
+if isPrime {
+    print("소수입니다.")
+} else {
+    print("소수가 아닙니다.")
+}
+
+
+
+
+
+
+
+// 소수 여부를 알려주는 함수 ==========================
+
+func primeNumberCheck(num: Int) -> Bool {
+
+    for i in 2..<num {
+
+        if num % i == 0 {
+
+            return false
+        }
+    }
+    return true
+}
+
+
+
+if primeNumberCheck(num: 7) {
+
+    print("소수입니다.")
+
+} else {
+
+    print("소수가 아닙니다.")
+}
+
+
+
+
+// 소수를 판별해서 프린트까지 해주는 함수 =================
+
+func primeNumber(num: Int) {
+
+    for i in 2..<num {
+
+        if num % i == 0 {
+
+            print("소수가 아닙니다.")
+
+            return
+        }
+    }
+
+    print("소수입니다.")
+}
+
+
+
+primeNumber(num: 97)
+
+
+
+```
