--- a/Swift/1.변수와 상수 /변수와 상수.md
+++ b/Swift/1.변수와 상수 /변수와 상수.md
@@ -1,471 +1,103 @@
+# Swift-Basic
+
+## Swift에 대하여
+
+- Swift는 2014년 애플이 발표한 신규 프로그래밍 언어입니다. 이전에는 iOS 앱 개발에 Objective-C 를 사용하였으며,
+  일부 회사나 오래된 라이브러리의 경우 Objective-C 코드가 일부 남아 있는 것을 확인할 수 있습니다.
+
+Swift 프로그래밍 언어는 Apple에서 “Objective without C” 라고 설명했듯이,
+C 언어 라이브러리 및 프레임워크와 호환되지만, C언어를 기반으로 하지 않습니다.
+따라서 배우고 이해하기 매우 쉽습니다.
+
+## Swift의 대표적인 특징
+
+- ### 가독성 및 유지 관리
+
+Objective-C보다 Swift 언어가 선호되는 가장 중요한 이유 중에 하나입니다.
+초보자도 코드를 배우고 이해하고 작성하기가 매우 간단하고 쉽습니다.
+코드가 적기 때문에 Swift 언어는 간결하고 광범위하게 재사용할 수 있습니다.
+
+- ### 빠른 앱 개발
+
+Swift는 이름 그대로, Swift 언어는 Objective-C 또는 Python과 같은 동시대의 언어에 비해 매우 빠릅니다.
+Swift의 성능은 산술 계산에서 가장 빠른 C++의 성능과 가장 비슷합니다.
+
+- ### Objective-C와의 호환성
+
+Swift는 C 또는 Objective-C와 관련이 없지만,
+Objective-C의 라이브러리 및 프레임워크와 호환됩니다.
+Swift를 사용하면서 Objective-C 프레임워크를 가져와 사용할 수 있습니다.
+
+- ### 안전하고 오류가 적다
+
+Swift는 컴파일 자체에서 오류를 발생시켜서 개발자가 즉시 수정할 수 있습니다. 개발자가 코드 작업과 동시에 버그를 작성, 컴파일 및 수정하여 더 나은 품질 관리를 구현하도록 도와줍니다. 코 드 작업 자체에서 오류가 수정되고 테스트 되기 때문에 앱이 훨씬 빠르고 효율적이므로 안전과 보안이 보장됩니다.
+
 # 변수와 상수
 
-## 1) 변수(Variables):변하는 데이터를 저장하는 공간(바구니)
+## 1) 변수(Variables)
 
-> 변수의 이름을 _'식별자'_ 라고 하며 한 영역에 오직 하나의 이름만을 사용해야 함.
-
-- 변수의 의미
-
-> ### 프로그램 동작의 첫번째 단계 -> 메모리에 값(데이터)을 저장 (변수)
-
-```
-var a = 10 // 변수를 선언하면서 저장
-
-var b = 20
-
-b = 25 // 변할 수 있는 데이터 값이니 당연히 값을 변경할 수 있다.
-
-b = b + 5
-
-var c = a + b   // 바인딩: 새로운 공간을 만들고 값을 복사(Copy)해서 저장
-
-print(c)    // 40을 출력
+- **변하는 데이터를 저장하는 메모리 공간(바구니)**
 
 ```
 
-#### 변수를 여러개 한꺼번에 선언하는 방법: ,(콤마)로 연결 -> 콤마를 통해서도 선언할 수 있다는 뜻.
+변수(Variables): 값이 변경 가능한(mutable)
+
+
+var a = 10		// 변수를 선언하며 저장
+
+var b = 15
+
+
+a = 25		   // 	변할 수 있는 데이터(Variables)이니 당연히 변경 가능하다.
+
+
+b = b + 10	  // 할당연산자(=): 오른쪽에 있는 데이터를 왼쪽에 초기화하거나 저장(할당)
+
+var c = a + b	// 바인딩: 새로운 메모리 공간을 만들고 값을 복사(Copy)해서 저장
+
+print(c)		//  50을 출력
+
 
 ```
-var x = 1, y = 10, z = 100
+
+## 변수의 이름 / 이름 짓기 규칙
 
 ```
 
-### 변수의 이름 / 이름 짓기 규칙
+var myName = "Jay"
+
+var gridPoint: (Int, Int) = (3, 25)
+
+var camelCaseExample: String = "Camel"
+
+var pi: Double = 3.14
+
+```
 
 - 변수의 이름은 소문자로 시작(대문자로 시작하는 것은 권장하지 않음)
+
+- 변수와 상수의 이름을 '식별자' 라고 하며 한 영역에 오직 하나의 이름만을 사용해야 함.
 
 - 중간에 숫자가 들어가는 것은 가능하지만 숫자를 첫글자로 시작하는 것은 불가하다.
 
 - 특수문자, 한자, 한글 등 사용가능 하지만, 관습적으로 잘 사용하지는 않음
 
-- 다른 언어(파이썬)에서는 중간에 \_(언더바)를 사용하기도 하지만 스위프트에서는 관습적으로 대문자를 사용한다.
+- 다른 언어(파이썬)에서는 중간에 \_(언더바)를 사용하기도 하지만 스위프트에서는 관습적으로 대문자를 사용한다.(CamelCase)
 
-```
-var nameOfYou = "김재혁"
+# 2) 상수(Constants)
 
-var doSomething = "Study"
+- **변하지 않는 데이터를 저장하는 공간(바구니)**
 
-var π = 3.1415926
-
-var 你好 = "你好世界"
-
-var 🐶🐮 = "dogcow"
-
-var 변수 = "안녕하세요"
+> **상수 사용의 이유: 가독성 / 특정 의미를 알아보기 쉽게 하기 위해서**
 
 ```
 
-### String Interporation(스트링 인터폴레이션): 문자열 보간법
+상수(constants): 값이 변경 불가능한(imutable)
 
-> 변수를 문자열 안에서 출력하는 방법
+let n = 123
 
-```
-var carb = "잡곡밥"
 
-var protein = "닭가슴살"
-
-var fat = "올리브 오일"
-
-var vitamin = "샐러드"
-
-print(carb, protein, fat)
-
-
-print("균형잡힌 식단을 위해 먼저 탄수화물 섭취로는 식이섬유가 풍부한 \(carb)을 준비하였으며, 단백질로는 \(protein)과 불포화지방이 풍부한 \(fat)으로 조리한 오믈렛을 준비하였습니다. 여기에 부족한 비타민을 섭취하기 위하여 \(vitamin)를 같이 곁들여 먹으면 한끼 식사로서 균형잡힌 식단이 될 것입니다.")
-
-```
-
-## 2) 상수(Constants): 변하지 않는 데이터를 저장하는 공간(바구니)
-
-> 상수의 이름을 _'식별자'_ 라고 하며 한 영역에 오직 하나의 이름만을 사용해야 함.
-
-- 변수: 값이 변경 가능한(mutable)
-
-- 상수: 값이 변경 불가능한(Imutable)
-
-- 상수 사용의 이유: 가독성 / 특정 의미를 알아보기 쉽게 하기 위하여
-
-```
-
-let i = "123"
-
-// i = 456     // -> 변하지 않는 데이터이므로 당연히 에러 발생
-
-print(i)
-
-```
-
-#### 변수와 상수를 통틀어, 변수(저장된 데이터라는 관점에서)라고 일반적으로 부르기도 함
-
-# 변수 선언의 정식 문법
-
-- 변수의 선언과 저장
-
-### 변수를 선언하면서 저장(메모리 공간을 먼저 생성하는 동시에 데이터를 저장)
-
-```
-var a: Int = 10
-
-```
-
-# 스위프트의 데이터 타입(Data Types)
-
-## 1) 데이터 타입(Data Types의 이해)
-
-- 타입이 왜 필요할까?
-
-> ### _데이터를 얼마만큼의 크기, 그리고 어떠한 형태로 저장할 것인지에 대한 약속이 필요_
-
-```
-var i: Int = 1
-
-var j: Int = 10
-
-
-// i = 1.5       // 소수점 타입 할당이 안됨
-
-
-var k = i + j
-
-print(k)
-
-
-
-// 타입은 메모리 공간의 크기와 연관이 있다.
-
-```
-
-### 스위프트(Swift)의 데이터 타입
-
-#### Swift에서 사용하는 데이터타입
-
-##### 1. Int: 정수(Integer) 🔸
-
-예시) ... -5 -4, -3, -2, -1, 0, 1, 2, 3, 4, 5 ...
-
-##### 2. Float: 실수(부동소수점) Floating-point Number 6자리 소수점
-
-예시) ... -4.3512, -4.3221, 1.3597, 3.1415 ...
-
-- 실수 타입 / 부동소수(floating - point) 타입
-
-- 소수점 표현 가능(6자리까지의 정보를 정확하게 저장) / 4바이트
-
-- 소수점 아래 6자리가 아닌 전제(정수 / 소수점 포함) 6자리(6자리를 벗어나면 반올림 등의 가능성이 있으므로 주의)
-
-##### 3. Double: 실수(부동소수점) 15자리 소수점 🔸(Swift에서 주로 사용)
-
-- 실수 타입(Float 타입에 비해 2배의 공간)
-
-- 소수점 표현 가능(15자리까지의 정보를 정확하게 저장) / 8바이트
-
-- 소수점 아래 15자리가 아닌 전체(정수 / 소수점 포함) 15자리(15자리를 벗어나면 반올림 등의 가능성이 있으므로 주의
-
-- Float과 Double은 정밀도에서 많은 차이가 난다.
-
-- (지수와 가수를 나눠서 복잡한 알고리즘으로 저장한다.)
-
-##### 4. Character: 문자(글자 한개)
-
-예시) "a", "b", "c", "김", " "(공백문자)
-
-##### 5. String: 문자열 🔸
-
-예시) "Hello", "안녕하세요", "곤니찌와" "123", ""(빈문자열)
-
-- 문자 / 문자열은 반드시 쌍따옴표("")를 붙여야 한다.
-
-##### 6. Bool: 참과 거짓 🔸
-
-- true or false 를 저장
-
-- 참(true) / 거짓(false) -> 프로그래밍에서 정말 다양한 상황에서 쓰임
-
-##### 7. 기타: UInt, UInt64, UInt32, UInt16, UInt8: 0, 그리고 양의 정수
-
-```
-var b: Int = 10
-
-var c: Double = 99
-
-print(b)        // 정수 10(Int형)
-
-print(c)        // 정수 99가 아닌 실수형으로 표현 되는 99.0
-
-
-let chr: Character = "5"
-
-type(of: chr)           // 타입을 확인하는 방법
-
-
-
-// let chr2: Character = "aa"   // 당연히 에러 발생. 글자 하나이므로
-
-
-let chr3: Character = " "      // 빈문자는 에러발생 그러나 공백문자는 가능
-
-
-let str: String = ""   // 빈문자열 저장가능
-
-
-let str1: String = "안녕하세요"
-
-```
-
-## 2) 타입 주석(Type Annotation)
-
-- 변수를 선언하면서, 타입도 명확하게 지정하는 방식
-
-#### 1. 변수를 선언 (타입 선언) -> 메모리 공간을 먼저 생성
-
-```
-var num: Int
-
-```
-
-#### 2. 값을 저장 (초기화) -> 데이터를 저장
-
-```
-num = 100
-
-```
-
-#### 3. 값을 읽기
-
-```
-print(num)
-
-```
-
-#### 자료형을 명확하게 지정
-
-```
-
-var a1: Int = 3
-
-var b1: Int = 4
-
-```
-
-#### 타입 선언과 초기화
-
-```
-var value: Double = 5.345
-
-value = 12.3    // 값 바꾸기
-
-
-var value2 = value
-
-```
-
-## 3) 타입 추론(Type Inference)
-
-- 타입을 지정하지 않아도, 컴파일러가 타입을 유추해서 (알아서 알맞는 타입으로 저장하는) 방식
-
-#### 값을 보고, 어떤 타입인지를 컴파일러가 추론해서 사용함
-
-```
-var name = "제이"
-
-type(of: name)
-
-
-
-var num1 = 2
-
-var num2 = 1.2
-
-var num3 = true
-
-
-type(of: num1)
-
-```
-
-## 4) 타입 안정성(Type Safety)
-
-- 스위프트는 데이터 타입을 명확하게 구분하여 사용하는 언어
-
-> #### 스위프트는 다른 타입끼리 계산할 수 없다.
-
-```
-let num5 = 7
-
-// let num6: Double = num5   // 호환되지 않음(메모리 공간의 크기가 다름)
-
-
-
-let d = 12
-
-let e = 3.14
-
-//let result = d + e   //정상적인 계산 불가능
-
-
-
-
-
-//  소수 + 정수를 더 할 수 없다.
-
-// "안녕" + 5 를 더할 수 없다.
-
-```
-
-## 5) 타입(형) 변환(Type Conversion)
-
-- 타입을 변환해서 사용할 수 있는 방법은 있다!
-
-#### 기존에 메모리에 저장된 값을 다른 형식으로 바꿔서, 새로운 값을 생성해서 다른 메모리 공간에 다시 저장
-
-```
-let str2 = "13579"
-
-let number1 = Int(str2)
-
-print(number1)
-
-
-
-
-
-
-let str3 = "13579.1"
-
-let number2 = Int(str3)
-
-// 타입컨버전이 실패했을 때 ====> nil(값이 없음)이 리턴될 수 있다.
-
-print(number2)
-
-
-
-
-let n = 99
-
-let n2 = Double(n)
-
-print(n2)
-
-
-
-
-
-let n3: Int = Int(2.4)
-
-print(n3)
-
-```
-
-> ### 타입이란 결국 데이터를 메모리라는 공간에 얼마만큼의 크기, 어떠한 형태로 저장할 것인지에 관한 문제
-
-## 타입 애일리어스(Type Alias)
-
-- 별칭 붙이기: 수학에서 치환과 유사
-
-#### 기존에 선언 되어있는 타입에 새로운 별칭을 붙여 코드 가독성을 높이는 문법
-
-```
-typealias Name = String // 왼쪽에 치환된 별칭이 위치
-
-let name: Name = "홍길동" // Name타입이 의미하는 것은 String과 완전히 동일
+n = 456		// 값이 변경 불가능하므로 당연히 에러 발생
 
 
 ```
-
-# 참고) 프로그래밍 관련 용어 정리
-
-## 1) 키워드(Keyword)
-
-- 약속어(스위프트에서 특별한 의미로 사용하겠다고 미리 정해놓은 단어)
-
-#### 예시) var, func, let, if, true
-
-## 2) 리터럴(Literals)
-
-- 코드에서 고정된 값으로 표현되는 문자 (데이터) 그 자체(Int / Double / String / Character / Bool 리터럴 등)
-
-```
-var a = 4
-
-// "오른쪽에는 정수 4를 넣었다."라고 할 수도 있지만, "오른쪽에는 할당하기 위해 <정수 리터럴>값인 정수4를 넣었다."
-
-var b: Int = 8
-
-
-var name = "홍길동"      // "문자열 리터럴" 값을 넣어야해.
-
-var double = 3.14      //  "더블 리터럴" 값 3.14
-
-
-"안녕"
-
-4.5
-
-```
-
-## 3) 식별자(identifier)
-
-- 변수, 상수, 함수, 사용자 정의 타입의 이름
-
-```
-
-var name1 = "손흥민"    // 식별자 name1
-
-let name2 = "이강인"    // 식별자 name2
-
-```
-
-## 4) 토큰(Token)
-
-- 코드의 가장 작은 단위: 코드에서 더이상 쪼갤 수 없는 최소의 단위 (식별자, 키워드, 구두점, 연산자, 리터럴)
-
-```
-// var
-
-// !=
-
-// 123
-
-// 토큰은 사이에 빈칸을 추가해선 안됨. (다만, 빈칸을 없애는 것은 때때로 괜찮음)
-
-// 프로그래밍에서는 줄바꿈/탭도 빈칸(공백)으로 인식함. 즉, 빈칸이 여러개 띄어있어도 컴퓨터가 인식하기에는 1개의 빈칸으로 봄
-
-// var aaa = 5
-
-```
-
-## 5) 표현식(Expression)
-
-- 값, 변수, 연산자의 조합으로 하나의 결과값으로 평가되는 코드 단위
-
-```
-
-// 하나의 값이 나오는 코드
-
-var n = 5   //       ====> 문 장 (할당하는 작업)
-
-17          // 17    ====> 표현식
-
-n           // 5     ====> 표현식
-
-n + 7       // 12    ====> 표현식
-
-n < 5      // false  ====> 표현식
-
-```
-
-## 6) 문장(Statement)
-
-- 문장 또는 구문: 특정 작업을 실행하는 코드 단위
-
-```
-var n2 = 3    // ====> 문장
-
-print(n)      // ====> 문장
-
-print("안녕")  // ====> 문장
-
-```
-
-#### 토큰(키워드) + 표현식(값) ====> 문장(작업을 명령)
