--- a/Swift/1.변수와 상수 /데이터타입.md
+++ b/Swift/1.변수와 상수 /데이터타입.md
@@ -24,7 +24,7 @@ print(k)
 
 > **타입은 메모리 공간의 크기와 연관이 있다.**
 
-### 스위프트(Swift)의 데이터 타입
+### 스위프트(Swift)의 데이터 타입: 스위프트는 모든 타입의 첫글자에 대문자를 사용
 
 1. Int:정수(Integer)
 
@@ -32,7 +32,21 @@ Int : -5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5 ...
 
 2. Float:실수(부동소수점) 6자리 소수점
 
-3. Double(부동 소수점) 15자리 소수점
+- 소수점 표현 가능(6자리 까지의 정보를 정확하게 저장) / 4바이트
+
+- 소수점 아래 6자리가 아닌 전체(정수/소수점 포함) 6자리 (6자리를 벗어나면 반올림의 가능성이 있으므로 주의)
+
+3. Double(부동 소수점) 15자리 소수점(Swift에서 주로 사용)
+
+- 실수 타입(Float 타입에 비해 2배의 공간)
+
+- 소수점 표현 가능(15자리까지의 정보를 정확하게 저장) / 8바이트
+
+- 소수점 아래 15자리가 아닌 전체(정수/소수점 포함) 15자리 (15자리를 벗어나면 반올림의 가능성이 있으므로 주의)
+
+(1). 두 타입은 정밀도에서 차이가 많이 난다.
+
+(2) (지수와 가수를 나눠서) 복잡한 알고리즘으로 저장한다.
 
 Double : -3.141592, -2.20958, 1.5418...
 
@@ -44,7 +58,13 @@ Character : "a", "b", "c", "1", " "(공백문자)
 
 String: "안녕하세요.", "Hello", ""(빈 문자열)
 
+- 문자 / 문자열은 반드시 쌍따옴표("") 안에 써야함을 주의
+
 6. Bool: 참과 거짓
+
+- true 또는 false를 저장
+
+- 참(true) / 거짓(false) -> 프로그래밍에서 정말 다양한 상황에서 쓰임
 
 Bool: true, false
 
@@ -200,3 +220,5 @@ print(n2)
 
 
 ```
+
+> ##### 결국 데이터를 메모리라는 공간에 어떤 크기 / 어떤 형태로 저장할 것인지에 관한 문제
