--- a/Swift/1.변수와 상수 /데이터타입.md
+++ b/Swift/1.변수와 상수 /데이터타입.md
@@ -4,7 +4,7 @@
 
 - 타입이 왜 필요할까?
 
-> **데이터를 얼마 만큼의 크키, 그리고 어떤 형태로 저장할 것인가에 대한 약속이 필요**
+> **데이터를 얼마 만큼의 크기, 그리고 어떤 형태로 저장할 것인가에 대한 약속이 필요**
 
 ```
 
@@ -26,17 +26,17 @@ print(k)
 
 ### 스위프트(Swift)의 데이터 타입: 스위프트는 모든 타입의 첫글자에 대문자를 사용
 
-1. Int:정수(Integer)
+##### 1. Int:정수(Integer)
 
 Int : -5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5 ...
 
-2. Float:실수(부동소수점) 6자리 소수점
+##### 2. Float:실수(부동소수점) 6자리 소수점
 
 - 소수점 표현 가능(6자리 까지의 정보를 정확하게 저장) / 4바이트
 
 - 소수점 아래 6자리가 아닌 전체(정수/소수점 포함) 6자리 (6자리를 벗어나면 반올림의 가능성이 있으므로 주의)
 
-3. Double(부동 소수점) 15자리 소수점(Swift에서 주로 사용)
+##### 3. Double(부동 소수점) 15자리 소수점(Swift에서 주로 사용)
 
 - 실수 타입(Float 타입에 비해 2배의 공간)
 
@@ -50,17 +50,17 @@ Int : -5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5 ...
 
 Double : -3.141592, -2.20958, 1.5418...
 
-4. Character:문자(글자 한개)
+##### 4. Character:문자(글자 한개)
 
 Character : "a", "b", "c", "1", " "(공백문자)
 
-5. String: 문자열
+##### 5. String: 문자열
 
 String: "안녕하세요.", "Hello", ""(빈 문자열)
 
 - 문자 / 문자열은 반드시 쌍따옴표("") 안에 써야함을 주의
 
-6. Bool: 참과 거짓
+##### 6. Bool: 참과 거짓
 
 - true 또는 false를 저장
 
@@ -221,4 +221,4 @@ print(n2)
 
 ```
 
-> ##### 결국 데이터를 메모리라는 공간에 어떤 크기 / 어떤 형태로 저장할 것인지에 관한 문제
+> ### **결국 데이터를 메모리라는 공간에 어떤 크기 / 어떤 형태로 저장할 것인지에 관한 문제**
