--- a/Swift/7.함수/함수 실행의 메모리 구조.md
+++ b/Swift/7.함수/함수 실행의 메모리 구조.md
@@ -67,6 +67,8 @@ threeAndFour()
 
 ### 플레이그라운드에 대한 가정 (메모리 구조를 더 잘 이해하기 위함)
 
+[플레이그라운드](https://github.com/ios-Jay/TIL/blob/main/img/playground.png)
+
 - #### **프로그래밍에서, 가장 처음으로 프로그래밍이 시작되는 곳은 main() 메인함수 (스위프트에서는 main.swift파일)**
 
 - #### **플레이 그라운드는 문법을 쉽게 공부하기 위한 목적이므로 main() 함수는 눈에 보이지 않지만, 구현이 되어있다고 가정**
