--- a/Swift-Basic/3.조건문/연습문제 .md
+++ b/Swift-Basic/3.조건문/연습문제 .md
@@ -18,13 +18,21 @@
 var myChoice = Int.random(in: 0...2)
 
 switch myChoice {
+
 case 0:
+
     print("가위입니다.")
+
 case 1:
+
     print("바위입니다.")
+
 case 2:
+
     print("보자기입니다.")
+
 default:
+
     break
 }
 
@@ -87,11 +95,11 @@ var computerChoice = Int.random(in: 0...2)
 
 switch myChoice {
 case 0:
-    print("당신의 선택은가위입니다.")
+    print("당신의 선택은 가위입니다.")
 case 1:
-    print("당신의 선택바위입니다.")
+    print("당신의 선택은 바위입니다.")
 case 2:
-    print("당신의 보자기입니다.")
+    print("당신의 선택은 보자기입니다.")
 default:
     break
 }
@@ -221,4 +229,30 @@ if myChoice == 0 {
 
 ```
 
-> #### _만들어 보고 나니 떠오른 생각: 매우 간단한 연산으로 처리할 수 있는 코드이니 순서쌍으로 처리할 수 있지만 실제 앱을 개발하면 이보다 더 복잡한 논리 구조를 처리 해야 할것이니 결국 조건문의 논리적 구조에 대한 여러 가지 코드를 분석하면서 조건문의 코드를 보다 논리적으로 간결하게 처리할 수 있는 능력이 훨씬 더 중요하다는 것을 알게 되었다._
+# 연습문제 2: 랜덤 빙고 게임
+
+> #### 조건문을 활용하여 스위프트로 랜덤 빙고 게임 만들기
+
+- 내가 선택한 것과 컴퓨터가 랜덤으로 선택한 것을 비교하고 출력
+
+```
+var computerChoice: Int = Int.random(in: 1...10)
+
+var myChoice: Int = Int.random(in: 1...10)
+
+
+
+if computerChoice > myChoice {
+
+    print("Up")
+
+} else if computerChoice < myChoice {
+
+    print("Down")
+
+} else {
+
+    print("Bingo")
+}
+
+```
