--- a/Swift-Basic/7.함수/함수 2.md
+++ b/Swift-Basic/7.함수/함수 2.md
@@ -1,81 +1,22 @@
-# 함수 Ⅱ
-
-## 함수의 오버로딩
-
-> 함수의 오버로딩에 대한 이해
-
-#### _오버로드(Overload): 영어로 '과적하다' 라는 뜻_
-
-> ##### 같은 이름의 함수에 매개변수(파라미터)를 다르게 선언하여, 하나의 함수 이름에 실제 여러개의 함수를 대응 시키는 것: 함수 이름의 재사용
-
-- 스위프트는 오버로딩을 지원하는 언어
-
-- ⭐️ 함수이름, 파라미터 수/자료형, 아규먼트 레이블, 리턴형을 모두 포함해서 함수를 식별
-
-```
-func doSomething(value: Int) {
-    print(value)
-}
-
-
-func doSomething(value: Double) {
-    print(value)
-}
-
-
-func doSomething(value: String) {
-    print(value)
-}
-
-
-func doSomething(_ value: String) {
-    print(value)
-}
-
-
-func doSomethging(value1: String, value2: Int) {
-    print(value1, value2)
-}
-
-
-
-
-doSomething(value: 5)
-
-doSomething(value: 3.4)
-
-doSomething(value: 3)
-
-```
-
-> ##### 오버로딩을 지원하지 않는 언어의 단점
-
-같은 기능을 제공하는 함수를 파라미터 형식마다
-
-이름을 다르게 구현해야하기 때문에
-
-함수의 이름이 많아지고,구별해서 사용하는 것이 어렵다.
-
-오버로딩을 지원함으로서 함수 이름 하나에
-
-여러개가 대응되도록 만들어 놓으면 일일이 함수의 이름을 외울 필요가 없어진다.
+# 함수 Part 2
 
 ## 범위(Scope)
 
-> Scope: 함수, if ,for문 등에 모두 해당
+- Scope:함수, if, for문 등에 모두 해당
 
-#### _코딩에서의 대원칙: 중괄호 내에서 밖의 변수는 접근 가능, 중괄호 밖에서 중괄호 내부의 변수는 접근 불가능_
+- 1.  변수는 코드에서 선언이 되어야, 그 이하의 코드에서 접근 가능(선언하기 이전에는 접근 불가함) (전역변수는 예외)
 
-1.  변수는 코드에서 선언이 되어야, 그 이하의 코드에서 접근 가능(선언하기 이전에는 접근 불가함) (전역변수는 예외)
+- 2.  상위스코프(범위)에 선언된 변수와 상수에 접근가능하며, 하위스코프(범위)에는 접근할 수 없다.
 
-2.  상위스코프(범위)에 선언된 변수와 상수에 접근가능하며, 하위스코프(범위)에는 접근할 수 없다.
+- 3.  (동일한 스코프에서 이름이 중복될 수 없지만, 다른 스코프에서는 이름 중복이 가능)
 
-3.  (동일한 스코프에서 이름이 중복될 수 없지만, 다른 스코프에서는 이름 중복이 가능): 가장 인접한 스코프에 있는 변수와 상수에 먼저 접근 한다.
+- 4.  가장 인접한 스코프에 있는 변수와 상수에 먼저 접근 한다.
 
 ### 첫번째 예제
 
 ```
 func greeting1() {
+
     print("Hello")
 
     var myName = "홍길동"
@@ -90,8 +31,10 @@ func greeting1() {
 }
 
 
-//print(myName)
-//print(name)
+// print(myName)
+
+// print(name)
+
 
 
 
@@ -109,26 +52,30 @@ var name = "잡스" // 전역변수 (메모리의 데이터 영역에 저장)
 
 greeting1()
 
-
-
-
 ```
 
 ### 두번째 예제
 
 ```
-var realName = "김재혁" // 전역 변수로서 미리 선언되어 있었다면 당연히 실행됨
+ var realName = "iOS-Jay"
+
+// 전역 변수로서 미리 선언되어 있었다면 당연히 실행됨
+
 func doSomething() {
 
-    // var realName = "앨런"
-    print(realName)       // 코드는 순서대로 작동하기 때문에, 선언이 되어있어야 사용 가능: 조건문에서 배운 프로그래밍의 기본 원칙 첫번쨰 -> 순차
+ var realName = "앨런"
 
-    var realName = "앨런"
+    print(realName)
+
+    // 코드는 순서대로 작동하기 때문에, 선언이 되어있어야 사용 가능: 조건문에서 배운 프로그래밍의 기본 원칙 첫번쨰 -> 순차
+
+//    var realName = "앨런"
+
+    print(realName)
 }
 
 
 doSomething()
-
 
 ```
 
@@ -136,47 +83,41 @@ doSomething()
 
 ```
 func sayGreeting1() {
+
     print("Hello")
 
 
     func sayGreeting2() {
+
         print("Hey")
 
         if true {
+
             print("")
         }
     }
 
-    sayGreeting2()
+    sayGreeting2()  // 내부이니 접근 가능
 
 }
 
 
 // sayGreeting1()
 
-// sayGreeting2()
+// sayGreeting2() -> sayGreeting1() 내부에 있는 함수이기 때문에 밖에서 접근이 불가능하다.
+
+
 
 ```
 
 # 제어전송문 정리
 
-- Swift에서 사용하는 제어전송 명령문(흐름 제어)
+## 1) break
 
-| 키워드      | 쓰이는 경우 | 설명                                                                                                                                                            |
-| ----------- | ----------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| break       | switch      | 1) switch문: 케이스에서 실행하는 문장이 없을때, break문을 반드시 입력해야함.                                                                                    |
-| break       | 반복문      | 2) 반복문: 가장 인접한 반복문의 모든 싸이클을 아예 중지(break)하고 반복문 다음 문장을 실행                                                                      |
-| fallthrough | switch      | switch문에서 매칭된 값에 대한 고려없이, 무조건 다음 문장도 실행하려 할때 입력                                                                                   |
-| continue    | 반복문      | 반복문에서 다음 반복문의 싸이클로 넘어가서 계속(continue 실행함)                                                                                                |
-| return      | 함수        | 1) 리턴 타입이 있는 함수: 리턴 키워드 다음의 표현식을 평가한 다음, 그 결과를 리턴하면서(함수 실행을 중지하고) 함수를 벗어남.                                    |
-| return      | 함수        | 2) 리턴 타입이 없는 함수: 함수의 실행을 중지하고 벗어남                                                                                                         |
-| throw       | 함수        | 에러가 발생 가능하도록 정의된 함수에서, throw 키워드 다음에 정의된 에러의 타입을 리턴하면서(함수의 실행을 중지하고) 함수를 벗어남(에러 처리 부분에서 다룰 예정) |
-
-## 1) Break
-
-- (1) switch문 (2) 반복문(for/while 등) 에서 사용
+- (1) switch문 (2)반복문(for / while 등) 에서 사용
 
 ```
+
 var a = 3
 
 switch a {
@@ -208,7 +149,7 @@ for index in 1...10 {
 
 ```
 
-## 2) Fallthrough
+## 2) fallthrough
 
 - switch문에서 사용
 
@@ -232,6 +173,8 @@ default:
 
 // 안녕하세요.
 
+
+
 ```
 
 ## 3) continue
@@ -246,26 +189,35 @@ for index in 1...10 {
     }
 
     print(index)
+
+    /* 간단하게 말해 건너뛰라는 뜻.
+
+  continue는 반복문을 다음 싸이클로 보냄
+
+  다음 싸이클에서 계속 지속(continue)하라는 의미
+
+  1) 반복문의 첫번째 index는 1
+
+  2) 1은 2로 나눴을 때 나머지가 1이므로 참
+
+  3) 조건이 참이므로 continue를 만남
+
+  4) continue를 만나므로 print(index)를 실행 시킬 수 없음
+
+  5) 첫 문장을 실행시키지 않고 다음 사이클(index = 2)로 넘어감
+
+  6) 2는 나머지가 0이므로 거짓, 따라서 continue를 실행시키지 않음
+
+  7) 즉 if문을 실행시키지 않고 if문 다음의 print(index)를 실행
+
+  8) 홀수 숫자는 continue를 만나고 짝수는 print 함수를 만남. 짝수가 출력됨
+
+
+
+ */
 }
+
 ```
-
-> ##### continue는 반복문을 다음 싸이클로 보냄
-
-- 다음 싸이클에서 계속 지속(continue)하라는 의미
-
-1. 반복문의 첫번째 index는 1
-
-2. 1은 2로 나눴을 때 나머지가 1이므로 참
-
-3. 조건이 참이므로 continue를 만남
-
-4. 첫 문장을 실행시키지 않고 다음 사이클(index = 2)로 넘어감
-
-5. 2는 나머지가 0이므로 거짓, 따라서 continue를 실행시키지 않음
-
-6. 즉 if문을 실행시키지 않고 if문 다음의 print(index)를 실행
-
-7. 홀수 숫자는 continue를 만나고 짝수는 print 함수를 만남. 짝수가 출력됨
 
 ## 4) return
 
@@ -273,10 +225,13 @@ for index in 1...10 {
 
 ```
 func doSomething() {
+
     print("1")
+
     print("2")
 
     if true {
+
         return
     }
 
@@ -290,6 +245,5 @@ func doSomething() {
 
 
 doSomething()
-
 
 ```
