클래스와 구조체

--- a/Swift-Basic/11.클래스와 구조체/클래스와 구조체.md
+++ b/Swift-Basic/11.클래스와 구조체/클래스와 구조체.md
@@ -1,10 +1,10 @@
-# 클래스와 구조체
+# 클래스(Class)와 구조체(Struct)
 
-## 1) 클래스(Class)
+## 1) 클래스(class)
 
 - 클래스의 정의와 객체의 생성
 
-#### 클래스: 어떤 하나의 '틀(형태)'을 찍어 내는 것. 붕어빵 틀 만들기
+> 클래스: 어떤 하나의 '틀(형태)'을 찍어 내는 것. 붕어빵틀 만들기
 
 ```
 class Dog {         // 타입(사용자 정의 타입)이므로 대문자 사용
@@ -26,13 +26,12 @@ class Dog {         // 타입(사용자 정의 타입)이므로 대문자 사용
     }
 }
 
-
 ```
 
-##### 붕어빵 찍어내기 (객체의 생성)
+> 붕어빵 찍어내기 (객체의 생성)
 
 ```
-var sia = Dog()
+var bori = Dog()
 
 ```
 
@@ -40,54 +39,54 @@ var sia = Dog()
 
 - 클래스 내부에 있는 함수를 '메서드(Method)' 라고 한다.
 
-##### 객체의 속성에 접근
+> 객체의 속성에 접근
 
 ```
-sia.name
+bori.name
 
-sia.name = "복실이"
+bori.name = "보리"
 
-sia.name
+bori.name
 
-sia.weight
+bori.weight
 
-sia.weight = 15
+bori.weight = 15
 
-sia.weight
+bori.weight
 
-sia.sit()
+bori.sit()
 
-sia.layDown()
-
-
-```
-
-##### 붕어빵 찍어내기 (객체의 생성)
-
-```
-var shin = Dog()
+bori.layDown()
 
 ```
 
-##### 객체의 속성에 접근
+> 붕어빵 찍어내기 (객체의 생성)
+
+```
+var choco = Dog()
+
 
 ```
 
-shin.name
+> 객체의 속성에 접근
 
-shin.name = "튼실이"
+```
+choco.name
 
-shin.name
+choco.name = "초코"
 
-shin.weight
+choco.name
 
-shin.weight = 25
+choco.weight
 
-shin.weight
+choco.weight = 10
 
-shin.sit()
+choco.weight
 
-shin.layDown()
+choco.sit()
+
+choco.layDown()
+
 
 ```
 
@@ -95,7 +94,7 @@ shin.layDown()
 
 - 구조체의 정의와 instance의 생성
 
-##### 붕어빵틀 만들기
+> 붕어빵틀 만들기
 
 ```
 
@@ -107,64 +106,67 @@ struct Bird {
 
     func fly() {
 
-        print("공중날기")
+        print("날아갑니다.")
     }
-
 }
 
-```
-
-##### 붕어빵 찍어내기 (인스턴스의 생성)
-
-```
-var gugu = Bird()
 
 ```
 
-##### 인스턴스의 속성에 접근
+> 붕어빵 찍어내기 (인스턴스의 생성)
+
+```
+var aBird = Bird()
+
 
 ```
 
-gugu.name
+> 인스턴스의 속성에 접근
 
-gugu.name = "구구"
+```
+aBird.name
 
-gugu.name
+aBird.name = "참새1"
 
-gugu.weight
+aBird.name
 
-gugu.weight = 0.35
+aBird.weight
 
-gugu.weight
+aBird.weight = 0.3
 
-gugu.fly()
+aBird.weight
+
+aBird.fly()
 
 ```
 
-##### 붕어빵 찍어내기 (인스턴스의 생성)
+> 붕어빵 찍어내기 (인스턴스의 생성)
 
 ```
-var pigeon = Bird()
+var bBird = Bird()
 
-```
-
-##### 인스턴스의 속성에 접근
 
 ```
 
-pigeon.name
+> 인스턴스의 속성에 접근
 
-pigeon.name = "피죤"
+```
 
-pigeon.name
+bBird.name
 
-pigeon.weight
+bBird.name = "참새2"
 
-pigeon.weight = 2.35
+bBird.name
 
-pigeon.weight
+bBird.weight
 
-pigeon.fly()
+bBird.weight = 0.35
+
+bBird.weight
+
+bBird.fly()
+
+
 
 ```
 
@@ -184,86 +186,9 @@ pigeon.fly()
 
 - 열거형의 인스턴스
 
-#### _⭐️ 가장 큰 차이는 메모리 저장 방식의 차이 ⭐️(중요)_
+- ⭐️ 가장 큰 차이는 메모리 저장 방식의 차이 ⭐️(중요)
 
-> #### 메모리 구조
-
-| 영역   | 내용                                                                             |     |
-| ------ | -------------------------------------------------------------------------------- | --- |
-| 코드   | 앱 실행시, 모든 코드가 일단 코드 영역에 올라감. 그리고 순차적으로 한줄씩 실행됨. |     |
-| 데이터 | 전역변수 및 타입속성 저장(어디서도 접근 가능한 데이터)                           |     |
-| 힙     | 참조타입(클래스의 객체, 클로저)                                                  |     |
-| 스택   | 함수의 실행시 필요 데이터가 생성, 사용 완료후 사라짐(Value 타입)                 |     |
-
-##### 1. 클래스
-
-- 참조 형식(Reference Type)
-
-- 인스턴스 데이터는 힙(Heap)에 저장, 해당 힙을 가르키는 변수는 스택에 저장하고
-
-- 메모리 주소값이 힙(Heap)을 가르킴
-
-- (복사시) 값을 전달하는 것이 아니고, 저장된 주소를 전달
-
-- 힙(Heap)의 공간에 저장, ARC 시스템을 통해 메모리 관리(주의해야함)
-
-- 참고: 스택은 데이터를 차곡 차곡(적층) 쌓지만, 힙은 데이터를 군데 군데(따로 따로) 저장
-
-- 스택의 영역에 실제로 생성된 변수가 생기고(메모리 주소만 담김. 그림 참조), 메모리 주소가 담기고, 그 주소가 힙의 영역을 가리킨다.
-
-> 클래스를 생성하게 되면 메모리 공간의 데이터 영역에 존재를 한다.
-
-즉, 데이터 영역에 클래스의 실제 데이터(Dog())가 존재한다.
-
-그리고 클래스의 인스턴스를 하나씩 찍어내면 메모리 영역 중 힙의 영역에 데이터들을 찍어 낸다.
-
-또한 클래스의 인스턴스들은 데이터 영역의 실제 데이터(Dog())의 메모리 주소를 가리킨다.
-
-그리고 실제로 찍어낸 인스턴스들은 힙의 영역에 존재하지만, 각각의 영역에 존재하는 메모리 주소를 변수에 담는다.
-
-###### 클래스(틀): 예시) Dog() 찍어 낸다 ---> 객체(실제 데이터)
-
-###### 클래스(틀): 데이터 영역에 저장
-
-###### 객체(실제 데이터): 힙의 영역에 저장
-
-```
-
-class Dog {
-
-    var name = "강아지"
-
-    var weight = 0
-
-    func sit() {
-
-        print("앉았습니다.)
-    }
-
-    func layDown() {
-
-        print("누웠습니다.)
-    }
-
-
-}
-
-var bori = Dog()        // var bori <-- 변수는 스택의 영역에 생성. 실제 데이터(객체)는 힙의 영역에 저장
-
-                        // var bori =  Dog() <-- 힙의 영역에 생성. 힙에 영역에 만들어진 데이터의 '메모리 주소를 변수(bori)에다가 담는다.
-
-
-var choco = Dog()
-
-
-bori != choco <-- 각각의 서로 다른 데이터 묶음(각각 실제 카톡 친구 목록)
-
-
-
-
-```
-
-##### 2. 구조체
+- 1.  구조체
 
 - 값 형식(Value Type)
 
@@ -279,53 +204,61 @@ bori != choco <-- 각각의 서로 다른 데이터 묶음(각각 실제 카톡 
 
 - 스택의 영역에 저장된다는 뜻은 함수가 실행되는 동안에만 존재한다는 뜻이다.
 
-> 구조체의 데이터는 클래스와 다르게 힙의 영역에서 찍어내지 않는다.
+- 2.  클래스
 
-클래스와 동일하게 메모리의 데이터 영역에 구조체의 원형(Bird())이 존재하고, 실제로 찍어낸 데이터(인스턴스)가 스택의 영역에 저장이 된다. 함수의 실행시 데이터가 생성되고 완료 후 사라진다. 즉, 함수가 실행되는 동안에만 존재한다는 뜻이다.
+- 참조 형식(Reference Type)
 
-```
-struct Bird {
+- 인스턴스 데이터는 힙(Heap)에 저장, 해당 힙을 가르키는 변수는 스택에 저장하고
 
-    var name = "새"
+- 메모리 주소값이 힙(Heap)을 가르킴
 
-    var weight = 0.0
+- (복사시) 값을 전달하는 것이 아니고, 저장된 주소를 전달
 
-    func fly() {
+- 힙(Heap)의 공간에 저장, ARC 시스템을 통해 메모리 관리(주의해야함)
 
-        print("날아갑니다.")
+- 참고: 스택은 데이터를 차곡차곡(적층) 쌓지만, 힙은 데이터를 군데 군데(따로 따로) 저장
 
-    }
+- 스택의 영역에 실제로 생성된 변수가 생기고(메모리 주소만 담김.), 그 주소가 힙의 영역을 가리킨다.
 
-}
+- 그렇지만 그 외의 면에서는 클래스와 구조체는 거의 동일하므로,
 
-func dosomething() {
+- 클래스와 구조체를 동시에 살펴볼 것임.
 
-    var aBird = Bird() <--- 인스턴스(실제 데이터)
+- 특별하게 차이를 언급하지 않는 한, 클래스의 기능은 동일하게 구조체에서 가지고 있다고 보면 됨
 
-aBird.name = "참새1"
+클래스의 원형(붕어빵 틀)은 데이터 영역에 존재한다.
 
-aBird.weight
+클래스의 인스턴스를 하나하나씩 찍어내면 실제로 메모리 영역 중에서 힙 영역에 존재한다.
 
-aBird.fly()
+힙 영역의 특성상 따로따로 저장이 되어 있을 것이다.
 
+그리고 실제로 생성된 클래스의 인스턴스들은 클래스의 원형(데이터 영역에 존재하는)의
 
-var bBird = Bird()
+메모리 주소를 가지고 있고 클래스의 원형을 가르키고 있다.(참조 타입)
 
-bBird.name = "참새2"
+var bori = Dog()
 
-bBird.weight
+클래스를 bori라는 변수에 담는다면 실제로 찍어낸 인스턴스들은 힙의 영역에 존재하지만
 
-bBird.fly()
+각각의 인스턴스들의 메모리 주소가 존재한다.
 
-// abird != bBird <--- 각각의 서로 다른 데이터 묶음(각각 실제 카톡 친구 목록)
+그리고 그 메모리 주소를 bori라는 변수에 담는 것이다.
 
-}
+즉, bori라는 변수는 스택의 영역에 생성되고,
 
+실제 데이터(인스턴스)는 힙의 영역에 저장된다.
 
+그리고 그 힙의 영역에 저장된 데이터의 주소, 메모리 주소를 변수(bori)에 담는 것이다.
 
+그래서 실제로 이 bori라는 변수에는 인스턴스의 메모리 주소만 담겨 있는 것이다.(참조 타입)
 
+구조체의 메모리는 힙의 영역에서 찍어내지 않는다.
 
-```
+구조체 역시 동일하게 데이터 영역에 구조체의 원형(붕어빵 틀)이 들어가 있고
+
+실제로 찍어낸 데이터가 스택의 영역에 저장이 된다.
+
+스택에 저장된다는 의미는 함수의 실행이 종료되면 사라진다는 의미이다.
 
 ### 클래스와 구조체의 메모리
 
@@ -336,42 +269,8 @@ class Person {
 
 }
 
-```
-
-> 클래스의 변수를 복사하는 경우에는
-
-메모리 주소를 복사해서 담는 것이기 때문에 동일한 데이터를 가리키게 된다.
-
-값을 저장하는 것이 아니고 저장된 주소를 전달하기 때문에 동일한 데이터를 가리킴
-
-```
-var p = Person()    // x1234(메모리 주소)
-
-p.name              // 사람
-
-p.name = "혜리"      // Person
-
-p.name              // 혜리
-
-var p2 = p          // (클래스)     // x1234(p의 메모리 주소)
-
-p2.name             // 혜리
-
-p2.name = "수진"     // Person
-
-p2.name             // 수진
 
 
-```
-
-##### 메모리 주소가 동일한 게 담겨 있기 때문에 결국 가리키는 것은 어느 하나의 데이터.
-
-```
-p.name              // 수진
-
-```
-
-```
 struct Animal {
 
     var name = "동물"
@@ -379,7 +278,35 @@ struct Animal {
 
 ```
 
-> 구조체의 변수를 복사하는 경우에는 무조건 데이터를 복사해서
+클래스의 변수를 복사하는 경우에는 메모리 주소를 복사해서 담는 것이기 때문에 동일한 데이터를 가리키게 된다.
+
+값을 저장하는 것이 아니고 저장된 주소를 전달하기 때문에 동일한 데이터를 가리킴
+
+```
+var p = Person()    // x1234(메모리 주소)
+
+p.name
+
+p.name = "혜리"
+
+p.name
+
+var p2 = p       // (클래스)     // x1234(p의 메모리 주소)
+
+p2.name
+
+p2.name = "수진"
+
+p2.name
+
+// 메모리 주소가 동일한 게 담겨 있기 때문에 결국 가리키는 것은 어느 하나의 데이터.
+
+p.name
+
+
+```
+
+구조체의 변수를 복사하는 경우에는 무조건 데이터를 복사해서
 
 새로 담는 것이기 때문에 각각의 데이터가 새롭게 생성된다.
 
@@ -390,17 +317,19 @@ struct Animal {
 구조체는 데이터가 새롭게 생성되므로 각각의 데이터로 남게 된다.
 
 ```
-var a = Animal()        // Animal
+var a = Animal()
 
-a.name                  // "동물"
+a.name
 
-var a2 = a              // (구조체)
 
-a.name = "강아지"         // Animal
 
-a.name                  // 강아지
+var a2 = a       // (구조체)
 
-a2.name                 // 동물
+a.name = "강아지"
+
+a.name      // "강아지"
+
+a2.name     // "동물"
 
 ```
 
@@ -410,7 +339,7 @@ a2.name                 // 동물
 
 - 즉 a의 name인 "동물"과 a2의 name인 "동물"은 서로 다른 데이터.
 
-> ###### 구조체는 클래스에 비해 훨씬 더 가볍다. 그래서 많은 경우에 구조체를 사용한다.
+- 구조체는 클래스에 비해 훨씬 더 가볍다. 그래서 많은 경우에 구조체를 사용한다.
 
 - 클래스는 구조체에 비해 조금 더 무겁다. 왜냐하면 힙이라는 영역에 저장하기 때문이다.
 
@@ -439,23 +368,26 @@ struct AnimalStruct {
 
 
 
-let pclass = PersonClass()      // PersonClass
+let pclass = PersonClass()
 
-pclass.name = "사람1"            // PersonClass
+pclass.name = "사람1"
 
-pclass.name                     // "사람1"
+pclass.name
 
 
 
-let astruct = AnimalStruct()    // animalStruct
+let astruct = AnimalStruct()
 
-// astruct.name = "동물1"        // 에러 발생(Cannot assign to property: 'astruct' is a 'let' constant)
+// astruct.name = "동물1"
 
-astruct.name                    // 동물
+astruct.name
+
 
 ```
 
-> 상수로 바인딩 했음에도 "사람1"을 할당하자 데이터가 변하는 것을 확인할 수 있다. 반면, 구조체에서는 변하지 않는다.
+- 상수로 바인딩 했음에도 "사람1"을 할당하자 데이터가 변하는 것을 확인할 수 있다.
+
+- 반면, 구조체에서는 변하지 않는다.
 
 구조체의 경우 상수로 선언하게 되면 속성 모두가 상수로 변하게 된다.
 
@@ -463,9 +395,7 @@ astruct.name                    // 동물
 
 반면, 클래스의 경우에는 메모리 주소를 상수로 선언한다는 뜻이다.
 
-즉, 메모리 주소를 변경할 수 없다는 뜻이다.
-
-그래서 다른 객체를 가리킬 수 없다.
+즉, 메모리 주소를 변경할 수 없다는 뜻이다. 그래서 다른 객체를 가리킬 수 없다.
 
 새로운 객체를 가리킬 수 있는 새로운 주소를 메모리에 저장할 수 없다는 의미이다.
 
@@ -486,13 +416,14 @@ astruct.name                    // 동물
 - 하위에 있는 속성이나 메서드를 가리킨다 라고 이해하면 충분하다.
 
 ```
-pigeon.fly()
 
-"공중날기"
+"안녕하세요."
+
+Int.random(in: 1...10)
 
 ```
 
-> ###### 문자열 조차도 구조체로 만들어저 있다.
+문자열 조차도 구조체로 만들어저 있다.
 
 그래서 실제로는 메모리에 인스턴스를 찍어내는 행위와 같다.
 
@@ -502,11 +433,13 @@ pigeon.fly()
 
 ### 관습적인 부분들에 대한 이해
 
-##### 일반적으로 클래스, 구조체 선언할때 모두
+- 일반적으로 클래스, 구조체 선언할때 모두
 
 - 1.  속성
 
 - 2.  메서드 순서대로 작성
+
+> #### **주의점 - (참고) 클래스 내부에는 직접 메서드(함수) 실행문이 올 수 없다. ⭐️**
 
 ```
 class Dog1 {
@@ -528,17 +461,16 @@ class Dog1 {
     }
 
     // sit() 클래스 외부에 있기 때문에 실행 불가
+
 }
 
 ```
-
-#### _주의점 - (참고) 클래스 내부에는 직접 메서드(함수) 실행문이 올 수 없다. ⭐️_
 
 - 메서드 실행문은 메서드의 정의문 내에 존재해야함
 
 - 처음 코딩하면서 자주 실수하는 부분임에 유의
 
-### ⭐️ 정리
+### 정리
 
 클래스의 경우 변수는 스택 영역에 생성이 되고 메모리 주소를 담고 있지만,
 
