--- a/Swift-Basic/10.열거형/열거형 1.md
+++ b/Swift-Basic/10.열거형/열거형 1.md
@@ -1,6 +1,4 @@
-# 열거형 Ⅰ
-
-## 열거형(Enumerations)
+# 열거형(Enumerations)
 
 - 연관된 상수(케이스)들을 하나의 이름으로 묶은 자료형
 
@@ -14,10 +12,9 @@
 
 - Swift 3 이전에는 대문자였으나 4부터 소문자로 시작
 
-###### 예시
+> 사용 예시
 
 ```
-
 enum Weekday {
 
     case monday
@@ -41,12 +38,11 @@ enum CompassPoint {
     case north, south, east, west
 }
 
-
 ```
 
 ### 언제 열거형을 사용하는가?
 
-> 한정된 사례(정해진 갯수) 안에서 정의할 수 있을때
+> #### **한정된 사례(정해진 갯수) 안에서 정의할 수 있을때**
 
 - 월 / 화 / 수 / 목 / 금 / 토 / 일
 
@@ -60,31 +56,15 @@ enum CompassPoint {
 
 - 가위 / 바위 / 보
 
-##### 열거형을 사용하면 코드의 가독성과 안정성이 높아짐 ===> 명확한 분기 처리 가능
+- 열거형을 사용하면 코드의 가독성과 안정성이 높아짐: 미리 정의해둔 타입의 케이스에서 벗어날 수 없으므로 코드의 가독성과 안정성이 높아진다.
+
+- 명확한 분기 처리 가능: Switch문과 함께 쓰임
 
 ### 열거형 타입
 
-#### _열거형은 타입이다!_
+- 열거형은 타입이다.
 
 ```
-
-enum Weekday {
-
-    case monday
-
-    case tuesday
-
-    case wednesday
-
-    case thursday
-
-    case friday
-
-    case saturday
-
-    case sunday
-}
-
 var today: Weekday = Weekday.monday
 
 // 타입을 명시하였기 때문에 var today = .monday 로도 표현 가능하다.
@@ -95,19 +75,18 @@ today = .tuesday
 
 // 물론 today = Weekday.tuesday 라는 표현식도 당연히 가능하다.
 
-```
 
-###### 일요일인 경우만 특정한 처리를 하고 싶을때
 
-```
+
+// 일요일인 경우만 특정한 처리를 하고 싶을때
+
 if today == .sunday {
 
 }
-```
 
-###### 모든 각각의 경우를 처리하고 싶을때
 
-```
+// 모든 각각의 경우를 처리하고 싶을때
+
 if today == .monday {
     print("오늘은 월요일입니다.")
 } else if today == .tuesday {
@@ -124,9 +103,10 @@ if today == .monday {
     print("오늘은 일요일입니다.")
 }
 
+
 ```
 
-#### _열거형은 항상 switch문으로 분기처리 가능_
+> #### **열거형은 항상 switch문으로 분기처리 가능**
 
 ```
 switch today {
@@ -147,13 +127,15 @@ case .sunday:
     print("오늘은 일요일입니다.")
 }
 
+
+
 ```
 
 ## 열거형의 원시값과 연관값
 
 - 열거형의 원시값(Raw Values)
 
-#### _열거형의 원시값은 매칭되는 기본값(정수/문자열)을 정해, 열거형을 좀 더 쉽게 활용 가능_
+> #### **열거형의 원시값은 매칭되는 기본값(정수/문자열)을 정해, 열거형을 좀 더 쉽게 활용 가능**
 
 - 열거형을 정의를 할때 Hashable한 타입을 써주는 것을 원시값이라고 한다.
 
@@ -174,26 +156,6 @@ enum Alignment: Int {
 
 }
 
-```
-
-- 원시값 입력안하면 0, 1, 2 이렇게 자동으로 저장됨 (정수의 경우 숫자가 하나씩 증가)
-
-- 1(설정시), 2, 3
-
-- 0, 2(설정시), 3
-
-```
-
-enum Alignment: Int {
-
-    case left
-
-    case center
-
-    case right
-
-}
-
 enum Alignment1: String {
 
     case left = "L"
@@ -202,6 +164,7 @@ enum Alignment1: String {
 
     case right = "R"
 }
+
 
 var num = Alignment.center.rawValue
 
@@ -227,11 +190,15 @@ let centerValue = Alignment1.center.rawValue
 
 ```
 
+- 원시값 입력안하면 0, 1, 2 이렇게 자동으로 저장됨 (정수의 경우 숫자가 하나씩 증가)
+
+- 1(설정시), 2, 3
+
 ### 원시값(Raw Values)의 활용
 
-#### _숫자 또는 문자열과 매칭시켜 자유롭게 활용 가능 (숫자 ←→ 열거형 타입)_
+> #### **숫자 또는 문자열과 매칭시켜 자유롭게 활용 가능 (숫자 ←→ 열거형 타입)**
 
-##### 가위 바위 보 열거형 만들기
+> 가위 바위 보 열거형 만들기
 
 ```
 enum RpsGame: Int {
@@ -243,9 +210,35 @@ enum RpsGame: Int {
     case scissors
 }
 
+RpsGame(rawValue: 0)!
+
+RpsGame(rawValue: 1)
+
+RpsGame(rawValue: 2)
+
+// 논리적으로 nil이 될 수 없다면
+
+let number = Int.random(in: 0...100) % 3
+
+print(RpsGame(rawValue: number)!)   // 자체가 열거형 타입
+
+// 출력은 하지만, 문자열은 아님에 주의
+
+// 옵셔널값을 안전하게 벗겨서 사용
+
+if let r = RpsGame(rawValue: 0) {
+
+    print(r)
+
+    // 출력은 하지만 문자열은 아님에 주의
+
+}
+
+
+
 ```
 
-> RpsGame.rock와 RpsGame(rawValue: 0)는 사실 다르다.
+RpsGame.rock와 RpsGame(rawValue: 0)는 사실 다르다.
 
 RpsGame(rawValue: 0)은 옵셔널 타입이다.
 
@@ -259,42 +252,7 @@ RpsGame(rawValue: 0)은 옵셔널 타입이다.
 
 var game = RpsGame(rawValue: 5) --> 타입을 확인해보면 옵셔널 확인 가능
 
-> 실제 앱을 만들때는
-
-```
-RpsGame(rawValue: 0)!
-
-RpsGame(rawValue: 1)
-
-RpsGame(rawValue: 2)
-
-// 논리적으로 nil이 될 수 없다면
-
-let number = Int.random(in: 0...100) % 3
-
-// 자체가 열거형 타입
-
-print(RpsGame(rawValue: number)!)
-
-// 출력은 하지만, 문자열은 아님에 주의
-
-
-```
-
-###### 옵셔널값을 안전하게 벗겨서 사용
-
-```
-if let r = RpsGame(rawValue: 0) {
-
-    print(r)
-
-    // 출력은 하지만 문자열은 아님에 주의
-
-}
-
-```
-
-##### 행성 열거형 만들기
+> 행성 열거형 만들기
 
 ```
 enum Planet: Int {
@@ -313,13 +271,15 @@ planet.rawValue
 let num1 = planet.rawValue
 
 print(num1)
+
+
 ```
 
-#### _결국 원시값이란 "열거형 각각의 케이스들을 숫자나 문자열 등과 매칭을 시켜서 자유롭게 활용하도록 하는 그런 개념이다." 라고 이해하면 된다._
+> #### **결국 원시값이란 "열거형 각각의 케이스들을 숫자나 문자열 등과 매칭을 시켜서 자유롭게 활용하도록 하는 개념이다." 라고 이해하면 된다.**
 
 ### 열거형의 연관값(Associated Values)
 
-#### _열거형의 연관값은 구체적인 추가정보를 저장하기 위해 사용_
+> #### **열거형의 연관값은 구체적인 추가정보를 저장하기 위해 사용**
 
 ```
 enum Computer {
@@ -329,36 +289,30 @@ enum Computer {
     case ram(Int, String)
 
     case hardDisk(gb: Int)
-
 }
 
 ```
 
-> 추가적인 정보를 저장할 수 있음
+- 추가적인 정보를 저장할 수 있음
 
-각 케이스별로 상이한 특징이 있고, 그것을 저장 / 활용할 필요가 있을 때
+- 각 케이스별로 상이한 특징이 있고, 그것을 저장 / 활용할 필요가 있을 때
 
-개별케이스마다 저장할 형식을 따로 정의(자료형에 제한이 없음 / 튜플의 형태)
+- 개별케이스마다 저장할 형식을 따로 정의(자료형에 제한이 없음 / 튜플의 형태)
 
-하나의 케이스에 서로 다른 연관값을 저장할 수 있음
+- 하나의 케이스에 서로 다른 연관값을 저장할 수 있음
 
-===> 선언 시점이 아니라, 새로운 열거형 값을 생성할때 저장
+- 선언 시점이 아니라, 새로운 열거형 값을 생성할때 저장
 
 연관값을 만들어 내는 것은 사실상 무한대로 찍어 낼 수 있다.
 
-그래서 연관값을 사용하는 이 개념은,
+그래서 연관값을 사용하는 이 개념은,이 케이스들은 어떤 카테고리의 역할밖에 하지 못한다.
 
-이 케이스들은 어떤 카테고리의 역할밖에 하지 못한다.
+구체적인 내용은 따로 저장. 연관값은 카테고리라고 비유하면 된다.
 
-구체적인 내용은 따로 저장.
-
-연관값은 카테고리라고 비유하면 된다.
-
-연관값은 카테고리이고 그 카테고리에 해당하는
-
-구체적인 값을 저장할 떄는 연관값을 사용.
+연관값은 카테고리이고 그 카테고리에 해당하는 구체적인 값을 저장할 떄는 연관값을 사용.
 
 ```
+
 let myChip1 = Computer.cpu(core: 8, ghz: 3.5)
 
 let myChip2 = Computer.cpu(core: 4, ghz: 2.0)
@@ -373,18 +327,16 @@ let myChip6 = Computer.hardDisk(gb: 128)
 
 let myChip7 = Computer.hardDisk(gb: 512)
 
+```
+
+- 원시값을 활용한다면 ====> 불가능
+
+- 정보가 바뀔때마다 무한대로 케이스를 만들고 싶을 때
+
+- 원시값은 사용 X 따라서 연관값 사용
 
 ```
 
-// 원시값을 활용한다면 ====> 불가능
-
-// 정보가 바뀔때마다 무한대로 케이스를 만들고 싶을 때
-
-// 원시값은 사용 X 따라서 연관값 사용
-
-// 모든 케이스들을 다 만들수가 없음
-
-```
 enum Computer1: String {
 
     case cpu = "6coreX2.6ghz"
@@ -393,26 +345,28 @@ enum Computer1: String {
 
     case hardDisk = "256gb"
 }
+
+
 ```
+
+> 모든 케이스들을 다 만들수가 없음
 
 ### 원시값(Raw Values)과 연관값(Associated Values)의 차이
 
-1. 자료형 선언 방식: 선언하는 위치가 다름
+1.  자료형 선언 방식: 선언하는 위치가 다름
 
-2. 선언 형식: (1) 원시값 ===> 2가지중 1가지 선택 / (2)연관값 ===> 튜플의 형태로 형식 제한 없음
+2.  선언 형식: (1) 원시값 ===> 2가지중 1가지 선택 / (2)연관값 ===> 튜플의 형태로 형식 제한 없음
 
-3. 값의 저장 시점: (원시값: 선언시점 / 연관값: 새로운 열거형 값을 생성할때 )
+3.  값의 저장 시점: (원시값: 선언시점 / 연관값: 새로운 열거형 값을 생성할때 )
 
-4. 서로 배타적: 하나의 열거형에서 원시값과 연관값을 함께 사용하는 것은 불가능 함
-
-### 연관값(Associated Values)의 활용
+4.  서로 배타적: 하나의 열거형에서 원시값과 연관값을 함께 사용하는 것은 불가능 함.
 
 ```
 var chip = Computer.cpu(core: 8, ghz: 2.0)
 
 
 switch chip {
-case .cpu(core: 8, ghz: 3.1):   //computer.cpu도 가능
+case .cpu(core: 8, ghz: 3.1):   // computer.cpu도 가능
     print("CPU 8코어 3.1GHz입니다.")
 case .cpu(core: 8, ghz: 2.6):
     print("CPU 8코어 2.6GHz입니다.")
@@ -441,5 +395,149 @@ case let .ram(a, _):
 case let .hardDisk(a) :
     print("하드디스크 \(a)기가 용량입니다.")
 }
+
+
+
+
+```
+
+## 옵셔널 타입에 대한 정확한 이해
+
+- 스위프트의 옵셔널(Optional) 타입
+
+옵셔널 타입 이라는 것은 내부적으로는 case가 구현이 되어 있는데
+
+.some case의 연관값이 지정된 케이스와
+
+.none case가 이렇게 두 가지 케이스가 구현되어 있는 것이 바로 옵셔널 타입이라는 것이다.
+
+> 옵셔널 타입의 내부 구현
+
+```
+
+  enum Optional<Wrapped> {     // 제네릭 문법
+      case some(Wrapped)
+      case none
+  }
+
+  var num: Int? = 7
+
+// 열거형(한정된 사례)
+
+var n1: Optional = Optional.some(7)
+
+// 연관값: 구체적인 정보를 저장, 카테고리와 같은 개념
+
+var n2 = Optional.none
+
+
+// 예시: 옵셔널 타입이라는 것은 이러한 열거형으로 구현 되어 있음
+
+enum Optional {
+
+    case some(Int)  // 연관값
+
+    case none
+}
+
+// if let 바인딩의 내부 구현 모습:연관값을 꺼내서 쓰는 것
+
+switch num {
+
+case .some(let a):  // let a = 7
+
+    // 열거형 case 패턴을 활용해서, 내부 연관값을 꺼냄
+
+    print(a)
+
+case .none:
+
+    print("nil")
+
+    // print(num!)
+}
+
+/*
+
+ switch num {
+
+ case Optional.some(let a):
+
+    print(a)
+
+ case Optional.none:
+
+    print("nil")
+
+ }
+
+ */
+
+
+
+```
+
+> 결론: 옵셔널 타입이라는 것은 내부적으로 열거형으로 구현이 되어 있는 것이다.
+
+- nil이라는 것은 값이 없음을 나타내는 키워드. 진짜 값이 없는게 아니고 나타내는 것
+
+- 그래서 사실은 none이었던 것이고 none인 경우에 강제로 값을 벗기면 실제 값이 메모리에 없기 때문에 에러 발생
+
+- 결국 none이라는 것은 열거형의 어떤 케이스일 뿐이다.
+
+## 열거형과 Switch문
+
+- 열거형의 정의와 switch문을 통한 활용
+
+> #### **열거형에 대한 구체적인 처리는 스위치(switch)문과 함께 쓸때, 사용성이 높아짐**
+
+```
+/ 로그인 타입을 정의
+
+enum LoginProvider: String {      // 3가지로 정의
+
+    case email
+
+    case facebook
+
+    case google
+}
+
+
+let userLogin = LoginProvider.facebook
+
+
+// 열거형은 항상 스위치문과 쓰인다고 생각해도 무방하다.
+
+// 열거형은 한정된 사례로 만든 타입이고,
+
+// 스위치문은 표현식에 대한 분기처리에 최적화
+
+switch userLogin {                   // 3가지로 분기처리
+
+case .email:
+
+    print("이메일 로그인")
+
+case .facebook:
+
+    print("페이스북 로그인")
+
+case .google:
+    print("구글 로그인")
+
+}
+
+
+
+
+// 물론 특정한 경우도 처리 가능
+
+if LoginProvider.email == userLogin {
+
+    print("이메일 로그인")
+
+}
+
 
 ```
