--- a/Swift-Basic/10.열거형/열거형 1.md
+++ b/Swift-Basic/10.열거형/열거형 1.md
@@ -1,4 +1,4 @@
-# 열거형(Enumerations)
+# 열거형(Enumerations) 1
 
 - 연관된 상수(케이스)들을 하나의 이름으로 묶은 자료형
 
@@ -405,34 +405,28 @@ case let .hardDisk(a) :
 
 - 스위프트의 옵셔널(Optional) 타입
 
-옵셔널 타입 이라는 것은 내부적으로는 case가 구현이 되어 있는데
+옵셔널 타입이라는 것은 내부적으로는 case가 구현이 되어 있는데
 
 .some case의 연관값이 지정된 케이스와
 
 .none case가 이렇게 두 가지 케이스가 구현되어 있는 것이 바로 옵셔널 타입이라는 것이다.
 
-> 옵셔널 타입의 내부 구현
+> 옵셔널 타입의 내부 구현:옵셔널 타입이라는 것은 내부적으로 열거형으로 구현이 되어 있는 것이다.
+
+```
+   enum Optional<Wrapped> {     // 제네릭 문법
+
+       case some(Wrapped)
+
+       case none
+   }
+
 
 ```
 
-  enum Optional<Wrapped> {     // 제네릭 문법
-      case some(Wrapped)
-      case none
-  }
+> 예시: 옵셔널 타입이라는 것은 이러한 열거형으로 구현 되어 있음
 
-  var num: Int? = 7
-
-// 열거형(한정된 사례)
-
-var n1: Optional = Optional.some(7)
-
-// 연관값: 구체적인 정보를 저장, 카테고리와 같은 개념
-
-var n2 = Optional.none
-
-
-// 예시: 옵셔널 타입이라는 것은 이러한 열거형으로 구현 되어 있음
-
+```
 enum Optional {
 
     case some(Int)  // 연관값
@@ -440,24 +434,26 @@ enum Optional {
     case none
 }
 
-// if let 바인딩의 내부 구현 모습:연관값을 꺼내서 쓰는 것
+var num: Int? = 7
 
-switch num {
+// 열거형(한정된 사례)
 
-case .some(let a):  // let a = 7
+// Optional.some(7): 실제 내부 구현
 
-    // 열거형 case 패턴을 활용해서, 내부 연관값을 꺼냄
+var n1: Optional = Optional.some(7)
 
-    print(a)
+// Optional.none: 실제 내부 구현
 
-case .none:
+var n2 = Optional.none
 
-    print("nil")
+// 연관값: 구체적인 정보를 저장, 카테고리와 같은 개념
 
-    // print(num!)
-}
 
-/*
+```
+
+> if let 바인딩 실제 내부 구현 모습: 결국 연관값을 꺼내서 쓰는 것이라고 이해하면 됨
+
+```
 
  switch num {
 
@@ -470,20 +466,32 @@ case .none:
     print("nil")
 
  }
+switch num {
 
- */
+case .some(let a):  // let a = 7
+
+    // 열거형 case 패턴을 활용해서, 내부 연관값을 꺼냄
+
+    print(a)
+
+case .none:
+
+    print("nil")
+
+     // print(num!)
+}
 
 
 
 ```
-
-> 결론: 옵셔널 타입이라는 것은 내부적으로 열거형으로 구현이 되어 있는 것이다.
 
 - nil이라는 것은 값이 없음을 나타내는 키워드. 진짜 값이 없는게 아니고 나타내는 것
 
 - 그래서 사실은 none이었던 것이고 none인 경우에 강제로 값을 벗기면 실제 값이 메모리에 없기 때문에 에러 발생
 
 - 결국 none이라는 것은 열거형의 어떤 케이스일 뿐이다.
+
+- .none은 명시적인 열거형으로 표현한 것이고, 일반적으로는 값이 없다는 의미의 nil키워드를 사용할뿐
 
 ## 열거형과 Switch문
 
