--- a/Swift-Basic/1.변수와 상수 /변수와 상수.md
+++ b/Swift-Basic/1.변수와 상수 /변수와 상수.md
@@ -407,7 +407,7 @@ print("안녕")  // ====> 문장
 
 ## 7) 경고와 오류
 
-[경고와 오류](https://github.com/ios-Jay/TIL/blob/main/img/%EA%B2%BD%EA%B3%A0%EC%99%80%20%EC%98%A4%EB%A5%98.png)
+![경고와 오류](https://github.com/ios-Jay/TIL/blob/main/img/%EA%B2%BD%EA%B3%A0%EC%99%80%20%EC%98%A4%EB%A5%98.png)
 
 # 스위프트의 데이터 타입
 
