플레이그라운드

--- a/Swift-Basic/6.함수/함수.md
+++ b/Swift-Basic/6.함수/함수.md
@@ -1414,7 +1414,7 @@ threeAndFour()
 
 ### 플레이그라운드에 대한 가정 (메모리 구조를 더 잘 이해하기 위함)
 
-[플레이그라운드](https://github.com/ios-Jay/TIL/blob/main/img/playground.png)
+![플레이그라운드](https://github.com/ios-Jay/TIL/blob/main/img/playground.png)
 
 - #### **프로그래밍에서, 가장 처음으로 프로그래밍이 시작되는 곳은 main() 메인함수 (스위프트에서는 main.swift파일)**
 
