--- a/Swift-Basic/4.조건문/조건문.md
+++ b/Swift-Basic/4.조건문/조건문.md
@@ -11,3 +11,172 @@
 ## 1) 조건문(if문)
 
 - 참(true) 또는 거짓(false)의 특정 조건에 따라 특정 코드만 실행하게 할 수 있는 문장
+
+```
+var number = 10
+
+
+if number < 10 {
+
+    print("10보다 작다.")
+}
+
+```
+
+> #### _"조건"의 자리에는 결과가 참 또는 거짓이 나와야 함_
+
+#### 조건문(if - else)
+
+```
+
+number = 20
+
+if number <= 10 {
+
+    print("10보다 작거나 같다.")
+
+} else { // else 문에는 조건이 오는 것이 아니다. else if와는 다름
+
+    print("10보다 크다.")
+}
+
+```
+
+#### if - else if - else
+
+```
+number = 30
+
+if number <= 10 {
+    print("10보다 작거나 같다.")
+} else if number <= 20 {
+    print("20보다 작거나 같다.")
+} else {
+    print("20보다 크고 30보다 작거나 같다.")
+}
+
+
+```
+
+#### if - else if
+
+```
+number = 40
+
+if number <= 30 {
+    print("30보다 작거나 같다.")
+} else if number >= 30 {
+    print("30보다 크거나 같다.")
+}
+
+
+```
+
+## 2) 조건문(if문)의 활용
+
+- 언제 사용할까? 활용예시
+
+```
+var myRpsChoice: Int = Int.random(in: 0...2)
+
+// 0:가위, 1:바위. 2:보
+
+if myRpsChoice == 0 {
+    print("가위입니다.")
+} else if myRpsChoice == 1 {
+    print("바위입니다.")
+} else if myRpsChoice == 2{
+    print("보입니다.")
+}
+
+```
+
+## 3) Switch문
+
+- 표현식/변수를 (매칭시켜) 분기처리할때 사용하는 조건문
+
+> #### if문보다 한정적인 상황에서 사용
+
+- 조건을 부등식이 아닌 "=="와만 비교
+
+- 변수가 어떤값을 가지냐에 따라 실행문을 선택하고 진행
+
+```
+
+var choice: String = "바위"
+
+
+switch choice { // 변수(표현식)
+case "가위":
+    print("가위입니다.") // "가위" == "가위"
+case "바위":
+    print("바위입니다.")
+case "보자기":
+    print("보자기입니다.")
+default:
+    break
+}
+
+```
+
+#### [스위치문의 특징]
+
+###### 1. 스위치문에서 케이스의 ,(콤마)는 '또는'의 의미로 하나의 케이스에 여러 매칭값을 넣을 수 있음
+
+###### 2. switch 문은 (비교하고 있는)값의 가능한 모든 경우의 수를 반드시 다루어야 함(exhaustive: 하나도 빠뜨리는 것 없이 철저한). 모든 사례를 다루지 않았을 때에는 디폴트 케이스가 반드시 있어야 한다.
+
+###### 3. 각 케이스에는 문장이 최소 하나 이상 있어야 하며 만약 없다면 컴파일 에러 발생(의도하지 않은 실수를 방지 목적)
+
+###### 4. 실행하지 않으려면, break를 반드시 입력해야함 (if문에서는 실행문을 입력안해도 괜찮지만, 스위치문에서는 필요함)
+
+## 4) Switch문의 활용
+
+- 스위치문과 밸류바인딩(Value Binding)
+
+> 바인딩의 일반적인 의미
+
+```
+
+var n1 = 7
+
+
+let n2 = n1
+
+
+```
+
+> #### 바인딩: 다른 새로운 변수 / 상수 식별자로 할당
+
+```
+var number1 = 6
+
+
+switch number1 {
+case let n:     // let n = number1
+    print("숫자: \(n)")
+default:
+    break
+}
+
+```
+
+- ### 스위치문과 where절(스위치문에서 조건을 확인하는 방식)
+
+- ##### 일단 다른 상수 값에 바인딩한(넣은)후, 조건절(참/거짓 문장)을 통해 다시 한번 더 조건 확인
+
+- ##### 바인딩 된 상수는 케이스블럭 내부에서만 사용 가능하고, 상수 바인딩은 주로 where절하고 같이 사용됨
+
+```
+var number2 = 7
+
+switch number2 {
+case let n where n % 2 == 0:
+    print("짝수 숫자: \(n)")
+case let n where n % 2 == 1:
+    print("홀수 숫자: \(n)")
+default:
+    break
+}
+```
+
+> #### where키워드는 조건을 확인하는 키워드
